@@ -15,6 +15,7 @@ import static org.sosy_lab.cpachecker.cfa.CFACreationUtils.isReachableNode;
 import com.google.common.base.Verify;
 import com.google.common.collect.ArrayListMultimap;
 import com.google.common.collect.FluentIterable;
+import com.google.common.collect.ImmutableMap;
 import com.google.common.collect.ImmutableSet;
 import com.google.common.collect.Multimap;
 import java.math.BigInteger;
@@ -73,6 +74,8 @@ import org.sosy_lab.common.log.LogManager;
 import org.sosy_lab.common.log.LogManagerWithoutDuplicates;
 import org.sosy_lab.cpachecker.cfa.CFACreationUtils;
 import org.sosy_lab.cpachecker.cfa.ast.ADeclaration;
+import org.sosy_lab.cpachecker.cfa.ast.AParameterDeclaration;
+import org.sosy_lab.cpachecker.cfa.ast.AVariableDeclaration;
 import org.sosy_lab.cpachecker.cfa.ast.FileLocation;
 import org.sosy_lab.cpachecker.cfa.ast.acsl.util.FunctionBlock;
 import org.sosy_lab.cpachecker.cfa.ast.acsl.util.StatementBlock;
@@ -112,7 +115,7 @@ import org.sosy_lab.cpachecker.cfa.model.c.CFunctionEntryNode;
 import org.sosy_lab.cpachecker.cfa.model.c.CReturnStatementEdge;
 import org.sosy_lab.cpachecker.cfa.model.c.CStatementEdge;
 import org.sosy_lab.cpachecker.cfa.parser.Parsers.EclipseCParserOptions;
-import org.sosy_lab.cpachecker.cfa.parser.eclipse.c.ASTConverter.CONDITION;
+import org.sosy_lab.cpachecker.cfa.parser.eclipse.c.ASTConverter.Condition;
 import org.sosy_lab.cpachecker.cfa.types.MachineModel;
 import org.sosy_lab.cpachecker.cfa.types.c.CDefaults;
 import org.sosy_lab.cpachecker.cfa.types.c.CNumericTypes;
@@ -131,7 +134,7 @@ import org.sosy_lab.cpachecker.util.Pair;
  *   <li>Inlined assembler code is ignored
  * </ul>
  */
-@SuppressWarnings({"InvalidBlockTag", "MissingSummary"}) // for @category
+@SuppressWarnings({"InvalidBlockTag", "MissingSummary", "dangling-doc-comments"}) // for comments
 class CFAFunctionBuilder extends ASTVisitor {
 
   // Data structure for maintaining our scope stack in a function
@@ -154,6 +157,8 @@ class CFAFunctionBuilder extends ASTVisitor {
   private final Deque<FileLocation> switchDefaultFileLocationStack = new LinkedList<>();
 
   private final CBinaryExpressionBuilder binExprBuilder;
+
+  private final MachineModel machineModel;
 
   // Data structures for handling goto
   private final Map<String, CFALabelNode> labelMap = new HashMap<>();
@@ -179,6 +184,8 @@ class CFAFunctionBuilder extends ASTVisitor {
   private final ShutdownNotifier shutdownNotifier;
   private final CheckBindingVisitor checkBinding;
   private final Sideassignments sideAssignmentStack;
+  ImmutableMap.Builder<CFANode, Set<AVariableDeclaration>> cfaNodeToAstLocalVariablesInScope;
+  ImmutableMap.Builder<CFANode, Set<AParameterDeclaration>> cfaNodeToAstParametersInScope;
 
   private boolean encounteredAsm = false;
 
@@ -191,7 +198,9 @@ class CFAFunctionBuilder extends ASTVisitor {
       MachineModel pMachine,
       String staticVariablePrefix,
       Sideassignments pSideAssignmentStack,
-      CheckBindingVisitor pCheckBinding) {
+      CheckBindingVisitor pCheckBinding,
+      ImmutableMap.Builder<CFANode, Set<AVariableDeclaration>> pCfaNodeToAstLocalVariablesInScope,
+      ImmutableMap.Builder<CFANode, Set<AParameterDeclaration>> pCfaNodeToAstParametersInScope) {
     options = pOptions;
     logger = pLogger;
     shutdownNotifier = pShutdownNotifier;
@@ -208,6 +217,7 @@ class CFAFunctionBuilder extends ASTVisitor {
     parseContext = pParseContext;
     checkBinding = pCheckBinding;
     binExprBuilder = new CBinaryExpressionBuilder(pMachine, pLogger);
+    machineModel = pMachine;
 
     shouldVisitDeclarations = true;
     shouldVisitEnumerators = true;
@@ -216,6 +226,8 @@ class CFAFunctionBuilder extends ASTVisitor {
     shouldVisitStatements = true;
     shouldVisitExpressions = true;
     sideAssignmentStack = pSideAssignmentStack;
+    cfaNodeToAstLocalVariablesInScope = pCfaNodeToAstLocalVariablesInScope;
+    cfaNodeToAstParametersInScope = pCfaNodeToAstParametersInScope;
   }
 
   FunctionEntryNode getStartNode() {
@@ -247,7 +259,7 @@ class CFAFunctionBuilder extends ASTVisitor {
   void finish() {
 
     // cleanup unnecessary nodes and edges, that were created before.
-    // cfaNodes were collected with with a FORWARD-search,
+    // cfaNodes were collected with a FORWARD-search,
     // so all unnecessary nodes are only reachable with BACKWARD-search.
     // we only disconnect them from the CFA and let garbage collection do the rest
     for (CFANode node : cfaNodes) {
@@ -300,24 +312,23 @@ class CFAFunctionBuilder extends ASTVisitor {
       // we should blacklist declarations in places we don't want, so for now I choose the latter
       // because the change has less impact.
       return PROCESS_SKIP;
-
-    } else if (declaration instanceof IASTSimpleDeclaration) {
-      return handleSimpleDeclaration((IASTSimpleDeclaration) declaration);
-
-    } else if (declaration instanceof IASTFunctionDefinition) {
-      return handleFunctionDefinition((IASTFunctionDefinition) declaration);
-
-    } else if (declaration instanceof IASTProblemDeclaration) {
-      visit(((IASTProblemDeclaration) declaration).getProblem());
-      return PROCESS_SKIP;
-
-    } else if (declaration instanceof IASTASMDeclaration) {
-      return ignoreASMDeclaration(declaration);
-
-    } else {
-      throw parseContext.parseError(
-          "Unknown declaration type " + declaration.getClass().getSimpleName(), declaration);
     }
+
+    return switch (declaration) {
+      case IASTSimpleDeclaration decl -> handleSimpleDeclaration(decl);
+
+      case IASTFunctionDefinition func -> handleFunctionDefinition(func);
+
+      case IASTProblemDeclaration problemDeclaration -> {
+        visit(problemDeclaration.getProblem());
+        yield PROCESS_SKIP;
+      }
+      case IASTASMDeclaration asm -> ignoreASMDeclaration(declaration);
+
+      default ->
+          throw parseContext.parseError(
+              "Unknown declaration type " + declaration.getClass().getSimpleName(), declaration);
+    };
   }
 
   /**
@@ -395,7 +406,8 @@ class CFAFunctionBuilder extends ASTVisitor {
           return prevNode;
 
         } else if (options.initializeAllVariables()) {
-          CInitializer initializer = CDefaults.forType(newD.getType(), newD.getFileLocation());
+          CInitializer initializer =
+              CDefaults.forType(machineModel, newD.getType(), newD.getFileLocation());
           newD =
               new CVariableDeclaration(
                   newD.getFileLocation(),
@@ -470,9 +482,12 @@ class CFAFunctionBuilder extends ASTVisitor {
 
     final FileLocation fileloc = astCreator.getLocation(declaration);
     final FunctionExitNode returnNode = new FunctionExitNode(fdef);
+    trackScopeInformation(returnNode);
 
     final FunctionEntryNode startNode =
         new CFunctionEntryNode(fileloc, fdef, returnNode, scope.getReturnVariable());
+    trackScopeInformation(startNode);
+
     returnNode.setEntryNode(startNode);
     cfa = startNode;
     blocks.add(new FunctionBlock(startNode));
@@ -618,52 +633,55 @@ class CFAFunctionBuilder extends ASTVisitor {
     }
 
     // Handle each kind of expression
-    if (statement instanceof IASTCompoundStatement) {
-      ASTNodeProperty property = statement.getPropertyInParent();
-      if (property == IGNUASTCompoundStatementExpression.STATEMENT) {
-        // IGNUASTCompoundStatementExpression content is already handled
-        return PROCESS_SKIP;
-      } else if (property == IASTCompoundStatement.NESTED_STATEMENT) {
-        blockStarts.push(locStack.peek());
+    switch (statement) {
+      case IASTCompoundStatement compoundStatement -> {
+        ASTNodeProperty property = statement.getPropertyInParent();
+        if (property == IGNUASTCompoundStatementExpression.STATEMENT) {
+          // IGNUASTCompoundStatementExpression content is already handled
+          return PROCESS_SKIP;
+        } else if (property == IASTCompoundStatement.NESTED_STATEMENT) {
+          blockStarts.push(locStack.peek());
+        }
+        scope.enterBlock();
+        // Do nothing, just continue visiting
       }
+      case IASTExpressionStatement iASTExpressionStatement ->
+          handleExpressionStatement(iASTExpressionStatement, fileloc);
+      case IASTIfStatement iASTIfStatement -> handleIfStatement(iASTIfStatement, fileloc);
+      case IASTWhileStatement iASTWhileStatement ->
+          handleWhileStatement(iASTWhileStatement, fileloc);
+      case IASTForStatement iASTForStatement -> {
+        return handleForStatement(iASTForStatement, fileloc);
+      }
+      case IASTBreakStatement iASTBreakStatement ->
+          handleBreakStatement(iASTBreakStatement, fileloc);
+      case IASTContinueStatement iASTContinueStatement ->
+          handleContinueStatement(iASTContinueStatement, fileloc);
+      case IASTLabelStatement iASTLabelStatement ->
+          handleLabelStatement(iASTLabelStatement, fileloc);
+      case IASTGotoStatement iASTGotoStatement -> handleGotoStatement(iASTGotoStatement, fileloc);
+      case IASTReturnStatement iASTReturnStatement ->
+          handleReturnStatement(iASTReturnStatement, fileloc);
+      case IASTSwitchStatement iASTSwitchStatement -> {
+        return handleSwitchStatement(iASTSwitchStatement, fileloc);
+      }
+      case IASTCaseStatement iASTCaseStatement -> handleCaseStatement(iASTCaseStatement, fileloc);
+      case IASTDefaultStatement iASTDefaultStatement ->
+          handleDefaultStatement(iASTDefaultStatement, fileloc);
 
-      scope.enterBlock();
-      // Do nothing, just continue visiting
-    } else if (statement instanceof IASTExpressionStatement) {
-      handleExpressionStatement((IASTExpressionStatement) statement, fileloc);
-    } else if (statement instanceof IASTIfStatement) {
-      handleIfStatement((IASTIfStatement) statement, fileloc);
-    } else if (statement instanceof IASTWhileStatement) {
-      handleWhileStatement((IASTWhileStatement) statement, fileloc);
-    } else if (statement instanceof IASTForStatement) {
-      return handleForStatement((IASTForStatement) statement, fileloc);
-    } else if (statement instanceof IASTBreakStatement) {
-      handleBreakStatement((IASTBreakStatement) statement, fileloc);
-    } else if (statement instanceof IASTContinueStatement) {
-      handleContinueStatement((IASTContinueStatement) statement, fileloc);
-    } else if (statement instanceof IASTLabelStatement) {
-      handleLabelStatement((IASTLabelStatement) statement, fileloc);
-    } else if (statement instanceof IASTGotoStatement) {
-      handleGotoStatement((IASTGotoStatement) statement, fileloc);
-    } else if (statement instanceof IASTReturnStatement) {
-      handleReturnStatement((IASTReturnStatement) statement, fileloc);
-    } else if (statement instanceof IASTSwitchStatement) {
-      return handleSwitchStatement((IASTSwitchStatement) statement, fileloc);
-    } else if (statement instanceof IASTCaseStatement) {
-      handleCaseStatement((IASTCaseStatement) statement, fileloc);
-    } else if (statement instanceof IASTDefaultStatement) {
-      handleDefaultStatement((IASTDefaultStatement) statement, fileloc);
-    } else if (statement instanceof IASTNullStatement) {
-      // We really don't care about blank statements
-    } else if (statement instanceof IASTDeclarationStatement) {
-      // these are handled by visit(IASTDeclaration)
-    } else if (statement instanceof IASTProblemStatement) {
-      visit(((IASTProblemStatement) statement).getProblem());
-    } else if (statement instanceof IASTDoStatement) {
-      handleDoWhileStatement((IASTDoStatement) statement, fileloc);
-    } else {
-      throw parseContext.parseError(
-          "Unknown AST node " + statement.getClass().getSimpleName(), statement);
+      case IASTNullStatement nullStatement -> {
+        // We really don't care about blank statements
+      }
+      case IASTDeclarationStatement declarationStatement -> {
+        // these are handled by visit(IASTDeclaration)
+      }
+      case IASTProblemStatement iASTProblemStatement -> visit(iASTProblemStatement.getProblem());
+
+      case IASTDoStatement iASTDoStatement -> handleDoWhileStatement(iASTDoStatement, fileloc);
+
+      default ->
+          throw parseContext.parseError(
+              "Unknown AST node " + statement.getClass().getSimpleName(), statement);
     }
 
     return PROCESS_CONTINUE;
@@ -679,9 +697,8 @@ class CFAFunctionBuilder extends ASTVisitor {
     CFANode lastNode = null;
     String rawSignature = exprStatement.getRawSignature();
 
-    if (exprStatement.getExpression() instanceof IASTExpressionList) {
-      for (IASTExpression exp :
-          ((IASTExpressionList) exprStatement.getExpression()).getExpressions()) {
+    if (exprStatement.getExpression() instanceof IASTExpressionList iASTExpressionList) {
+      for (IASTExpression exp : iASTExpressionList.getExpressions()) {
         CStatement statement = astCreator.convertExpressionToStatement(exp);
         lastNode = createIASTExpressionStatementEdges(rawSignature, fileloc, prevNode, statement);
         prevNode = lastNode;
@@ -709,14 +726,13 @@ class CFAFunctionBuilder extends ASTVisitor {
         // Example: void f(){}; int main(){(0, f());}
         resultIsUsed = false;
 
-      } else if (statement instanceof CExpressionStatement) {
+      } else if (statement instanceof CExpressionStatement cExpressionStatement) {
         // this may be code where the resulting value of a ternary operator is not used, e.g. (x ?
         // f() : g())
         List<Pair<IASTExpression, CIdExpression>> tempVars =
             sideAssignmentStack.getConditionalExpressions();
         if ((tempVars.size() == 1)
-            && (tempVars.get(0).getSecond()
-                == ((CExpressionStatement) statement).getExpression())) {
+            && (tempVars.getFirst().getSecond() == cExpressionStatement.getExpression())) {
           resultIsUsed = false;
         }
       }
@@ -760,6 +776,7 @@ class CFAFunctionBuilder extends ASTVisitor {
     }
 
     CFALabelNode labelNode = new CFALabelNode(cfa.getFunction(), labelName);
+    trackScopeInformation(labelNode);
     locStack.push(labelNode);
 
     if (localLabel == null) {
@@ -1026,12 +1043,18 @@ class CFAFunctionBuilder extends ASTVisitor {
     CFACreationUtils.addEdgeToCFA(edge, logger, options.showDeadCode());
   }
 
+  private void trackScopeInformation(CFANode pNode) {
+    cfaNodeToAstLocalVariablesInScope.put(pNode, scope.getVariablesInScope());
+    cfaNodeToAstParametersInScope.put(pNode, scope.getParameters());
+  }
+
   /**
    * @category helper
    */
   private CFANode newCFANode() {
     assert cfa != null;
     CFANode nextNode = new CFANode(cfa.getFunction());
+    trackScopeInformation(nextNode);
     return nextNode;
   }
 
@@ -1110,8 +1133,8 @@ class CFAFunctionBuilder extends ASTVisitor {
       @Nullable CFANode lastNode) {
     assert expression != null;
 
-    if (expression instanceof IASTExpressionList) {
-      IASTExpression[] expressions = ((IASTExpressionList) expression).getExpressions();
+    if (expression instanceof IASTExpressionList iASTExpressionList) {
+      IASTExpression[] expressions = iASTExpressionList.getExpressions();
       CFANode nextNode = null;
 
       for (int i = 0; i < expressions.length; i++) {
@@ -1134,8 +1157,8 @@ class CFAFunctionBuilder extends ASTVisitor {
       // this is just a placeholder signalising that the sideeffects do not
       // need to have a return value
       if (stmt == null
-          || (stmt instanceof CExpressionStatement
-              && ((CExpressionStatement) stmt).getExpression() == CIntegerLiteralExpression.ZERO)) {
+          || (stmt instanceof CExpressionStatement cExpressionStatement
+              && cExpressionStatement.getExpression() == CIntegerLiteralExpression.ZERO)) {
         return handleAllSideEffects(prevNode, fileLocation, rawSignature, false);
       } else {
         prevNode = handleAllSideEffects(prevNode, fileLocation, rawSignature, true);
@@ -1255,12 +1278,11 @@ class CFAFunctionBuilder extends ASTVisitor {
       Set<CFANode> pInnerNodes) {
 
     // unwrap (a)
-    if (condition instanceof IASTUnaryExpression
-        && ((IASTUnaryExpression) condition).getOperator()
-            == IASTUnaryExpression.op_bracketedPrimary) {
+    if (condition instanceof IASTUnaryExpression iASTUnaryExpression
+        && iASTUnaryExpression.getOperator() == IASTUnaryExpression.op_bracketedPrimary) {
       return buildConditionTree(
           pRawSignature,
-          ((IASTUnaryExpression) condition).getOperand(),
+          iASTUnaryExpression.getOperand(),
           fileLocation,
           rootNode,
           thenNode,
@@ -1273,11 +1295,11 @@ class CFAFunctionBuilder extends ASTVisitor {
           pInnerNodes);
 
       // !a --> switch branches
-    } else if (condition instanceof IASTUnaryExpression
-        && ((IASTUnaryExpression) condition).getOperator() == IASTUnaryExpression.op_not) {
+    } else if (condition instanceof IASTUnaryExpression iASTUnaryExpression
+        && iASTUnaryExpression.getOperator() == IASTUnaryExpression.op_not) {
       buildConditionTree(
           pRawSignature,
-          ((IASTUnaryExpression) condition).getOperand(),
+          iASTUnaryExpression.getOperand(),
           fileLocation,
           rootNode,
           elseNode,
@@ -1291,8 +1313,8 @@ class CFAFunctionBuilder extends ASTVisitor {
       return Optional.empty();
 
       // a && b
-    } else if (condition instanceof IASTBinaryExpression
-        && ((IASTBinaryExpression) condition).getOperator() == IASTBinaryExpression.op_logicalAnd) {
+    } else if (condition instanceof IASTBinaryExpression iASTBinaryExpression
+        && iASTBinaryExpression.getOperator() == IASTBinaryExpression.op_logicalAnd) {
       // This case is not necessary,
       // but it prevents the need for a temporary variable in the common case of
       // "if (a && b)"
@@ -1300,7 +1322,7 @@ class CFAFunctionBuilder extends ASTVisitor {
       pInnerNodes.add(innerNode);
       buildConditionTree(
           pRawSignature,
-          ((IASTBinaryExpression) condition).getOperand1(),
+          iASTBinaryExpression.getOperand1(),
           fileLocation,
           rootNode,
           innerNode,
@@ -1313,7 +1335,7 @@ class CFAFunctionBuilder extends ASTVisitor {
           pInnerNodes);
       buildConditionTree(
           pRawSignature,
-          ((IASTBinaryExpression) condition).getOperand2(),
+          iASTBinaryExpression.getOperand2(),
           fileLocation,
           innerNode,
           thenNode,
@@ -1327,8 +1349,8 @@ class CFAFunctionBuilder extends ASTVisitor {
       return Optional.empty();
 
       // a || b
-    } else if (condition instanceof IASTBinaryExpression
-        && ((IASTBinaryExpression) condition).getOperator() == IASTBinaryExpression.op_logicalOr) {
+    } else if (condition instanceof IASTBinaryExpression iASTBinaryExpression
+        && iASTBinaryExpression.getOperator() == IASTBinaryExpression.op_logicalOr) {
       // This case is not necessary,
       // but it prevents the need for a temporary variable in the common case of
       // "if (a || b)"
@@ -1336,7 +1358,7 @@ class CFAFunctionBuilder extends ASTVisitor {
       pInnerNodes.add(innerNode);
       buildConditionTree(
           pRawSignature,
-          ((IASTBinaryExpression) condition).getOperand1(),
+          iASTBinaryExpression.getOperand1(),
           fileLocation,
           rootNode,
           thenNode,
@@ -1349,7 +1371,7 @@ class CFAFunctionBuilder extends ASTVisitor {
           pInnerNodes);
       buildConditionTree(
           pRawSignature,
-          ((IASTBinaryExpression) condition).getOperand2(),
+          iASTBinaryExpression.getOperand2(),
           fileLocation,
           innerNode,
           thenNode,
@@ -1401,20 +1423,19 @@ class CFAFunctionBuilder extends ASTVisitor {
     rootNode = handleAllSideEffects(rootNode, fileLocation, rawSignature, true);
     exp.accept(checkBinding);
 
-    final CONDITION kind = astCreator.getConditionKind(exp);
+    final Condition kind = astCreator.getConditionKind(exp);
     switch (kind) {
-      case ALWAYS_FALSE:
+      case ALWAYS_FALSE -> {
         // no edge connecting rootNode with thenNode,
         // so the "then" branch won't be connected to the rest of the CFA
-
         final BlankEdge falseEdge =
             new BlankEdge(rawSignature, onlyFirstLine(fileLocation), rootNode, elseNode, "");
         addToCFA(falseEdge);
 
         // reset side assignments which are not necessary
         return CIntegerLiteralExpression.ZERO;
-
-      case ALWAYS_TRUE:
+      }
+      case ALWAYS_TRUE -> {
         final BlankEdge trueEdge =
             new BlankEdge(rawSignature, onlyFirstLine(fileLocation), rootNode, thenNode, "");
         addToCFA(trueEdge);
@@ -1422,12 +1443,8 @@ class CFAFunctionBuilder extends ASTVisitor {
         // no edge connecting prevNode with elseNode,
         // so the "else" branch won't be connected to the rest of the CFA
         return CIntegerLiteralExpression.ONE;
-
-      case NORMAL:
-        break;
-
-      default:
-        throw new AssertionError();
+      }
+      case NORMAL -> {}
     }
 
     if (furtherThenComputation) {
@@ -1438,19 +1455,6 @@ class CFAFunctionBuilder extends ASTVisitor {
     }
 
     FileLocation loc = astCreator.getLocation(condition);
-    if (fileLocation.getStartingLineNumber() < loc.getStartingLineNumber()) {
-      loc =
-          new FileLocation(
-              loc.getFileName(),
-              loc.getNiceFileName(),
-              fileLocation.getNodeOffset(),
-              loc.getNodeLength() + loc.getNodeOffset() - fileLocation.getNodeOffset(),
-              fileLocation.getStartingLineNumber(),
-              loc.getEndingLineNumber(),
-              fileLocation.getStartingLineInOrigin(),
-              loc.getEndingLineInOrigin(),
-              fileLocation.isOffsetRelatedToOrigin() && loc.isOffsetRelatedToOrigin());
-    }
 
     CExpression expression = exp;
 
@@ -1477,7 +1481,7 @@ class CFAFunctionBuilder extends ASTVisitor {
   }
 
   /**
-   * This method adds 2 edges to the cfa: 1. trueEdge from rootNode to thenNode and 2. falseEdge
+   * This method adds 2 edges to the CFA: 1. trueEdge from rootNode to thenNode and 2. falseEdge
    * from rootNode to elseNode.
    *
    * @category conditions
@@ -1637,6 +1641,7 @@ class CFAFunctionBuilder extends ASTVisitor {
     addToCFA(blankEdge);
 
     CFANode nextNode = new CFANode(cfa.getFunction());
+    trackScopeInformation(nextNode);
     locStack.push(nextNode);
   }
 
@@ -1658,7 +1663,7 @@ class CFAFunctionBuilder extends ASTVisitor {
     addToCFA(new BlankEdge("", onlyFirstLine(fileLocation), prevNode, loopInit, "for"));
 
     // loopStart is the Node before the loop itself,
-    // it is the the one after the init edge(s)
+    // it is the one after the init edge(s)
     final CFANode loopStart =
         createInitEdgeForForLoop(forStatement.getInitializerStatement(), fileLocation, loopInit);
     loopStart.setLoopStart();
@@ -1743,17 +1748,17 @@ class CFAFunctionBuilder extends ASTVisitor {
   private CFANode createInitEdgeForForLoop(
       final IASTStatement statement, final FileLocation fileLocation, CFANode prevNode) {
 
-    if (statement instanceof IASTDeclarationStatement) {
+    if (statement instanceof IASTDeclarationStatement iASTDeclarationStatement) {
       // "int counter = 0;"
-      final IASTDeclaration decl = ((IASTDeclarationStatement) statement).getDeclaration();
-      if (!(decl instanceof IASTSimpleDeclaration)) {
+      final IASTDeclaration decl = iASTDeclarationStatement.getDeclaration();
+      if (!(decl instanceof IASTSimpleDeclaration iASTSimpleDeclaration)) {
         throw parseContext.parseError("Unexpected declaration in header of for loop", decl);
       }
-      return createEdgeForDeclaration((IASTSimpleDeclaration) decl, fileLocation, prevNode);
+      return createEdgeForDeclaration(iASTSimpleDeclaration, fileLocation, prevNode);
 
-    } else if (statement instanceof IASTExpressionStatement) {
+    } else if (statement instanceof IASTExpressionStatement iASTExpressionStatement) {
       // "counter = 0;"
-      IASTExpression expression = ((IASTExpressionStatement) statement).getExpression();
+      IASTExpression expression = iASTExpressionStatement.getExpression();
       return createEdgeForExpression(expression, fileLocation, prevNode, null);
 
     } else if (statement instanceof IASTNullStatement) {
@@ -1784,8 +1789,8 @@ class CFAFunctionBuilder extends ASTVisitor {
       final BlankEdge blankEdge = new BlankEdge("", fileLocation, loopStart, firstLoopNode, "");
       addToCFA(blankEdge);
 
-    } else if (condition instanceof IASTExpressionList) {
-      IASTExpression[] expl = ((IASTExpressionList) condition).getExpressions();
+    } else if (condition instanceof IASTExpressionList iASTExpressionList) {
+      IASTExpression[] expl = iASTExpressionList.getExpressions();
       for (int i = 0; i < expl.length - 1; i++) {
         loopStart = createEdgeForExpression(expl[i], fileLocation, loopStart, null);
       }
@@ -1807,6 +1812,8 @@ class CFAFunctionBuilder extends ASTVisitor {
         f.getNodeLength(),
         f.getStartingLineNumber(),
         f.getStartingLineNumber(),
+        f.getStartColumnInLine(),
+        f.getEndColumnInLine(),
         f.getStartingLineInOrigin(),
         f.getStartingLineInOrigin(),
         f.isOffsetRelatedToOrigin());
@@ -1855,6 +1862,7 @@ class CFAFunctionBuilder extends ASTVisitor {
             postSwitchNode));
 
     locStack.push(new CFANode(cfa.getFunction()));
+    trackScopeInformation(locStack.peek());
 
     switchDefaultStack.push(null);
     switchDefaultFileLocationStack.push(null);
@@ -1922,16 +1930,11 @@ class CFAFunctionBuilder extends ASTVisitor {
 
     // if there is a range, this has to be handled in another way,
     // the expression is split up, and the bounds are tested
-    if (right instanceof IASTBinaryExpression
-        && ((IASTBinaryExpression) right).getOperator() == IASTBinaryExpression.op_ellipses) {
+    if (right instanceof IASTBinaryExpression iASTBinaryExpression
+        && iASTBinaryExpression.getOperator() == IASTBinaryExpression.op_ellipses) {
       nextCaseStartsAtNode =
           handleCaseRangeStatement(
-              (IASTBinaryExpression) right,
-              switchExpr,
-              rootNode,
-              caseNode,
-              notCaseNode,
-              fileLocation);
+              iASTBinaryExpression, switchExpr, rootNode, caseNode, notCaseNode, fileLocation);
     } else {
       nextCaseStartsAtNode =
           handleCaseSingleStatement(
@@ -1971,9 +1974,9 @@ class CFAFunctionBuilder extends ASTVisitor {
     final CExpression exp = astCreator.simplifyExpressionOneStep(binExp);
     final CFANode nextCaseStartsAtNode =
         switch (astCreator.getConditionKind(exp)) {
-            // no edge connecting rootNode with caseNode,
-            // so the "case" branch won't be connected to the rest of the CFA.
-            // also ignore the edge from rootNode to notCaseNode, it is not needed
+          // no edge connecting rootNode with caseNode,
+          // so the "case" branch won't be connected to the rest of the CFA.
+          // also ignore the edge from rootNode to notCaseNode, it is not needed
           case ALWAYS_FALSE -> rootNode;
           case ALWAYS_TRUE -> {
             final BlankEdge trueEdge =
@@ -2027,18 +2030,18 @@ class CFAFunctionBuilder extends ASTVisitor {
         buildBinaryExpression(switchExpr, bigEnd, CBinaryExpression.BinaryOperator.LESS_EQUAL);
 
     final CExpression firstExp = astCreator.simplifyExpressionOneStep(firstPart);
-    final CONDITION firstKind = astCreator.getConditionKind(firstExp);
+    final Condition firstKind = astCreator.getConditionKind(firstExp);
     final CExpression secondExp = astCreator.simplifyExpressionOneStep(secondPart);
-    final CONDITION secondKind = astCreator.getConditionKind(secondExp);
+    final Condition secondKind = astCreator.getConditionKind(secondExp);
 
     final CFANode nextCaseStartsAtNode;
-    if (firstKind == CONDITION.ALWAYS_FALSE || secondKind == CONDITION.ALWAYS_FALSE) {
+    if (firstKind == Condition.ALWAYS_FALSE || secondKind == Condition.ALWAYS_FALSE) {
       // no edge connecting rootNode with caseNode,
       // so the "case" branch won't be connected to the rest of the CFA.
       // also ignore the edge from rootNode to notCaseNode, it is not needed
       nextCaseStartsAtNode = rootNode;
 
-    } else if (firstKind == CONDITION.ALWAYS_TRUE && secondKind == CONDITION.ALWAYS_TRUE) {
+    } else if (firstKind == Condition.ALWAYS_TRUE && secondKind == Condition.ALWAYS_TRUE) {
       final BlankEdge trueEdge =
           new BlankEdge(
               "",
@@ -2050,7 +2053,7 @@ class CFAFunctionBuilder extends ASTVisitor {
       nextCaseStartsAtNode = notCaseNode;
 
     } else { // build small condition-tree
-      assert firstKind == CONDITION.NORMAL && secondKind == CONDITION.NORMAL
+      assert firstKind == Condition.NORMAL && secondKind == Condition.NORMAL
           : "either both conditions can be evaluated or not, but mixed is not allowed";
 
       final CFANode intermediateNode = newCFANode();
@@ -2144,7 +2147,7 @@ class CFAFunctionBuilder extends ASTVisitor {
       // ignore side assignment
       sideAssignmentStack.getAndResetPreSideAssignments();
 
-      prevNode = handleConditionalExpression(prevNode, condExps.get(0).getFirst(), null);
+      prevNode = handleConditionalExpression(prevNode, condExps.getFirst().getFirst(), null);
 
     } else {
 
@@ -2182,18 +2185,17 @@ class CFAFunctionBuilder extends ASTVisitor {
 
   private CFANode handleConditionalExpression(
       final CFANode prevNode, final IASTExpression condExp, final @Nullable CIdExpression tempVar) {
-    if (condExp instanceof IASTConditionalExpression) {
-      return handleTernaryOperator((IASTConditionalExpression) condExp, prevNode, tempVar);
-    } else if (condExp instanceof IASTBinaryExpression) {
-      return handleShortcuttingOperators((IASTBinaryExpression) condExp, prevNode, tempVar);
-    } else if (condExp instanceof IGNUASTCompoundStatementExpression) {
-      return handleCompoundStatementExpression(
-          (IGNUASTCompoundStatementExpression) condExp, prevNode, tempVar);
-    } else if (condExp instanceof IASTExpressionList) {
-      return handleExpressionList((IASTExpressionList) condExp, prevNode, tempVar);
-    } else {
-      throw new AssertionError();
-    }
+    return switch (condExp) {
+      case IASTConditionalExpression iASTConditionalExpression ->
+          handleTernaryOperator(iASTConditionalExpression, prevNode, tempVar);
+      case IASTBinaryExpression iASTBinaryExpression ->
+          handleShortcuttingOperators(iASTBinaryExpression, prevNode, tempVar);
+      case IGNUASTCompoundStatementExpression iGNUASTCompoundStatementExpression ->
+          handleCompoundStatementExpression(iGNUASTCompoundStatementExpression, prevNode, tempVar);
+      case IASTExpressionList iASTExpressionList ->
+          handleExpressionList(iASTExpressionList, prevNode, tempVar);
+      default -> throw new AssertionError();
+    };
   }
 
   /**
@@ -2224,23 +2226,23 @@ class CFAFunctionBuilder extends ASTVisitor {
 
     CStatement stmt = null;
     if (tempVar != null) {
-      if (exp instanceof CAssignment) {
+      if (exp instanceof CAssignment cAssignment) {
         CFANode lastNode = newCFANode();
         CFAEdge edge =
             new CStatementEdge(
                 exp.toASTString(), (CStatement) exp, lastExpLocation, prevNode, lastNode);
         addToCFA(edge);
         prevNode = lastNode;
-        stmt = createStatement(lastExpLocation, tempVar, ((CAssignment) exp).getLeftHandSide());
+        stmt = createStatement(lastExpLocation, tempVar, cAssignment.getLeftHandSide());
       } else {
         stmt = createStatement(lastExpLocation, tempVar, (CRightHandSide) exp);
       }
-    } else if (exp instanceof CStatement) {
-      stmt = (CStatement) exp;
-    } else if (!(exp instanceof CRightHandSide)) {
+    } else if (exp instanceof CStatement cStatement) {
+      stmt = cStatement;
+    } else if (!(exp instanceof CRightHandSide cRightHandSide)) {
       throw parseContext.parseError("invalid expression type", lastExp);
     } else {
-      stmt = createStatement(lastExpLocation, null, (CRightHandSide) exp);
+      stmt = createStatement(lastExpLocation, null, cRightHandSide);
     }
     CFANode lastNode = newCFANode();
     CFAEdge edge =
@@ -2280,8 +2282,8 @@ class CFAFunctionBuilder extends ASTVisitor {
     assert loopDepth == loopStartStack.size();
 
     IASTStatement lastStatement = statements[statements.length - 1];
-    if (lastStatement instanceof IASTProblemStatement) {
-      throw parseContext.parseError((IASTProblemStatement) lastStatement);
+    if (lastStatement instanceof IASTProblemStatement iASTProblemStatement) {
+      throw parseContext.parseError(iASTProblemStatement);
     }
 
     // If we do not need a return value, last statement is also easy.
@@ -2300,7 +2302,7 @@ class CFAFunctionBuilder extends ASTVisitor {
       return locStack.pop();
     }
 
-    if (!(lastStatement instanceof IASTExpressionStatement)) {
+    if (!(lastStatement instanceof IASTExpressionStatement iASTExpressionStatement)) {
       throw parseContext.parseError(
           "Unsupported statement type "
               + lastStatement.getClass().getSimpleName()
@@ -2310,19 +2312,18 @@ class CFAFunctionBuilder extends ASTVisitor {
 
     // Now we need to convert the last statement and get a value that we can assign to tempVar.
     CAstNode exp =
-        astCreator.convertExpressionWithSideEffects(
-            ((IASTExpressionStatement) lastStatement).getExpression());
+        astCreator.convertExpressionWithSideEffects(iASTExpressionStatement.getExpression());
 
     CFANode middleNode = locStack.pop();
     CRightHandSide rhs;
-    if (exp instanceof CRightHandSide) {
+    if (exp instanceof CRightHandSide cRightHandSide) {
       middleNode =
           handleAllSideEffects(
               middleNode,
               astCreator.getLocation(lastStatement),
               lastStatement.getRawSignature(),
               true);
-      rhs = (CRightHandSide) exp;
+      rhs = cRightHandSide;
     } else {
       Verify.verify(
           exp instanceof CAssignment,
@@ -2370,16 +2371,13 @@ class CFAFunctionBuilder extends ASTVisitor {
 
     // create the four condition edges
     switch (binExp.getOperator()) {
-      case IASTBinaryExpression.op_logicalAnd:
-        createConditionEdges(
-            binExp.getOperand1(), fileLocation, rootNode, intermediateNode, elseNode);
-        break;
-      case IASTBinaryExpression.op_logicalOr:
-        createConditionEdges(
-            binExp.getOperand1(), fileLocation, rootNode, thenNode, intermediateNode);
-        break;
-      default:
-        throw new AssertionError();
+      case IASTBinaryExpression.op_logicalAnd ->
+          createConditionEdges(
+              binExp.getOperand1(), fileLocation, rootNode, intermediateNode, elseNode);
+      case IASTBinaryExpression.op_logicalOr ->
+          createConditionEdges(
+              binExp.getOperand1(), fileLocation, rootNode, thenNode, intermediateNode);
+      default -> throw new AssertionError();
     }
     createConditionEdges(binExp.getOperand2(), fileLocation, intermediateNode, thenNode, elseNode);
 
@@ -2435,7 +2433,7 @@ class CFAFunctionBuilder extends ASTVisitor {
     if (condExp.getPositiveResultExpression() == null) {
       // Converting the logical-condition expression twice may cause problems,
       // for example if it defines labels inside it.
-      // Thus we reuse the condition expression returned by createConditionEdges,
+      // Thus, we reuse the condition expression returned by createConditionEdges,
       // if possible.
       if (condition.isPresent()) {
         createEdgesForTernaryOperatorBranch(
@@ -2525,7 +2523,7 @@ class CFAFunctionBuilder extends ASTVisitor {
       boolean resultIsUsed =
           (tempVar != null)
               || (sideAssignmentStack.getConditionalExpressions().size() > 1)
-              || (exp != sideAssignmentStack.getConditionalExpressions().get(0).getSecond());
+              || (exp != sideAssignmentStack.getConditionalExpressions().getFirst().getSecond());
 
       prevNode =
           handleAllSideEffects(prevNode, fileLocation, condExp.getRawSignature(), resultIsUsed);
@@ -2610,22 +2608,20 @@ class CFAFunctionBuilder extends ASTVisitor {
       leftHandSide.accept(checkBinding);
       // create assignments
 
-      if (rightHandSide instanceof CExpression) {
-        return new CExpressionAssignmentStatement(
-            fileLoc, leftHandSide, (CExpression) rightHandSide);
-      } else if (rightHandSide instanceof CFunctionCallExpression) {
-        return new CFunctionCallAssignmentStatement(
-            fileLoc, leftHandSide, (CFunctionCallExpression) rightHandSide);
+      if (rightHandSide instanceof CExpression cExpression) {
+        return new CExpressionAssignmentStatement(fileLoc, leftHandSide, cExpression);
+      } else if (rightHandSide instanceof CFunctionCallExpression cFunctionCallExpression) {
+        return new CFunctionCallAssignmentStatement(fileLoc, leftHandSide, cFunctionCallExpression);
       } else {
         throw new AssertionError();
       }
 
     } else {
       // create ordinary statements
-      if (rightHandSide instanceof CExpression) {
-        return new CExpressionStatement(fileLoc, (CExpression) rightHandSide);
-      } else if (rightHandSide instanceof CFunctionCallExpression) {
-        return new CFunctionCallStatement(fileLoc, (CFunctionCallExpression) rightHandSide);
+      if (rightHandSide instanceof CExpression cExpression) {
+        return new CExpressionStatement(fileLoc, cExpression);
+      } else if (rightHandSide instanceof CFunctionCallExpression cFunctionCallExpression) {
+        return new CFunctionCallStatement(fileLoc, cFunctionCallExpression);
       } else {
         throw new AssertionError();
       }
@@ -2648,15 +2644,15 @@ class CFAFunctionBuilder extends ASTVisitor {
       fileLoc = checkNotNull(pFileLoc);
     }
 
-    public CFANode getPrevNode() {
+    CFANode getPrevNode() {
       return prevNode;
     }
 
-    public IASTGotoStatement getGotoStatement() {
+    IASTGotoStatement getGotoStatement() {
       return gotoStatement;
     }
 
-    public FileLocation getFileLoc() {
+    FileLocation getFileLoc() {
       return fileLoc;
     }
   }
