@@ -10,16 +10,21 @@ package org.sosy_lab.cpachecker.cpa.interval;
 
 import static com.google.common.base.Preconditions.checkArgument;
 
+import com.google.common.base.Predicates;
 import com.google.common.base.Splitter;
 import com.google.common.collect.ComparisonChain;
+import java.io.Serial;
 import java.io.Serializable;
 import java.math.BigInteger;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
+import java.util.function.Predicate;
+import java.util.regex.Pattern;
 import org.sosy_lab.common.collect.PathCopyingPersistentTreeMap;
 import org.sosy_lab.common.collect.PersistentMap;
+import org.sosy_lab.cpachecker.cfa.model.FunctionEntryNode;
 import org.sosy_lab.cpachecker.cfa.model.FunctionExitNode;
 import org.sosy_lab.cpachecker.core.defaults.LatticeAbstractState;
 import org.sosy_lab.cpachecker.core.interfaces.AbstractQueryableState;
@@ -27,7 +32,6 @@ import org.sosy_lab.cpachecker.core.interfaces.FormulaReportingState;
 import org.sosy_lab.cpachecker.core.interfaces.Graphable;
 import org.sosy_lab.cpachecker.core.interfaces.PseudoPartitionable;
 import org.sosy_lab.cpachecker.exceptions.InvalidQueryException;
-import org.sosy_lab.cpachecker.util.CheckTypesOfStringsUtil;
 import org.sosy_lab.cpachecker.util.predicates.smt.FormulaManagerView;
 import org.sosy_lab.java_smt.api.BooleanFormula;
 import org.sosy_lab.java_smt.api.IntegerFormulaManager;
@@ -41,7 +45,7 @@ public class IntervalAnalysisState
         FormulaReportingState,
         PseudoPartitionable {
 
-  private static final long serialVersionUID = -2030700797958100666L;
+  @Serial private static final long serialVersionUID = -2030700797958100666L;
 
   private static final Splitter propertySplitter = Splitter.on("<=").trimResults();
 
@@ -88,7 +92,7 @@ public class IntervalAnalysisState
    * This method returns the reference count for a given variable.
    *
    * @param variableName of the variable to query the reference count on
-   * @return the reference count of the variable, or 0 if the the variable is not yet referenced
+   * @return the reference count of the variable, or 0 if the variable is not yet referenced
    */
   private Integer getReferenceCount(String variableName) {
     return referenceCounts.getOrDefault(variableName, 0);
@@ -98,7 +102,7 @@ public class IntervalAnalysisState
    * This method determines if this element contains an interval for a variable.
    *
    * @param variableName the name of the variable
-   * @return true, if this element contains an interval for the given variable
+   * @return whether this element contains an interval for the given variable
    */
   public boolean contains(String variableName) {
     return intervals.containsKey(variableName);
@@ -210,7 +214,7 @@ public class IntervalAnalysisState
    * imposed by the lattice.
    *
    * @param reachedState the reached state
-   * @return true, if this element is less or equal than the reached state, based on the order
+   * @return whether this element is less or equal than the reached state, based on the order
    *     imposed by the lattice
    */
   @Override
@@ -326,36 +330,39 @@ public class IntervalAnalysisState
     return "IntervalAnalysis";
   }
 
+  private static boolean isLong(String s) {
+    return Pattern.matches("-?\\d+", s);
+  }
+
   @Override
   public boolean checkProperty(String pProperty) throws InvalidQueryException {
     List<String> parts = propertySplitter.splitToList(pProperty);
 
     if (parts.size() == 2) {
 
-      if (CheckTypesOfStringsUtil.isLong(parts.get(0))) {
+      if (isLong(parts.getFirst())) {
         // pProperty = value <= varName
-        long value = Long.parseLong(parts.get(0));
+        long value = Long.parseLong(parts.getFirst());
         Interval iv = getInterval(parts.get(1));
         return (value <= iv.getLow());
 
-      } else if (CheckTypesOfStringsUtil.isLong(parts.get(1))) {
+      } else if (isLong(parts.get(1))) {
         // pProperty = varName <= value
         long value = Long.parseLong(parts.get(1));
-        Interval iv = getInterval(parts.get(0));
+        Interval iv = getInterval(parts.getFirst());
         return (iv.getHigh() <= value);
 
       } else {
         // pProperty = varName1 <= varName2
-        Interval iv1 = getInterval(parts.get(0));
+        Interval iv1 = getInterval(parts.getFirst());
         Interval iv2 = getInterval(parts.get(1));
         return iv1.contains(iv2);
       }
 
       // pProperty = value1 <= varName <= value2
     } else if (parts.size() == 3) {
-      if (CheckTypesOfStringsUtil.isLong(parts.get(0))
-          && CheckTypesOfStringsUtil.isLong(parts.get(2))) {
-        long value1 = Long.parseLong(parts.get(0));
+      if (isLong(parts.getFirst()) && isLong(parts.get(2))) {
+        long value1 = Long.parseLong(parts.getFirst());
         long value2 = Long.parseLong(parts.get(2));
         Interval iv = getInterval(parts.get(1));
         return (value1 <= iv.getLow() && iv.getHigh() <= value2);
@@ -389,25 +396,53 @@ public class IntervalAnalysisState
 
   @Override
   public BooleanFormula getFormulaApproximation(FormulaManagerView pMgr) {
+    return getFormulaApproximationWithSpecifiedVars(pMgr, Predicates.alwaysTrue(), true);
+  }
+
+  @Override
+  public BooleanFormula getScopedFormulaApproximation(
+      final FormulaManagerView pManager, final FunctionEntryNode pFunctionScope) {
+    return getFormulaApproximationWithSpecifiedVars(
+        pManager,
+        name ->
+            !name.startsWith("__CPAchecker_TMP_")
+                && !name.contains("::__CPAchecker_TMP_")
+                && (name.startsWith(pFunctionScope.getFunctionName() + "::")
+                    || !name.contains("::")),
+        false);
+  }
+
+  private BooleanFormula getFormulaApproximationWithSpecifiedVars(
+      final FormulaManagerView pMgr,
+      final Predicate<String> considerVar,
+      final boolean useQualifiedVarNames) {
     IntegerFormulaManager nfmgr = pMgr.getIntegerFormulaManager();
     List<BooleanFormula> result = new ArrayList<>();
     for (Entry<String, Interval> entry : intervals.entrySet()) {
-      Interval interval = entry.getValue();
-      if (interval.isEmpty()) {
-        // one invalid interval disqualifies the whole state
-        return pMgr.getBooleanFormulaManager().makeFalse();
-      }
+      if (considerVar.test(entry.getKey())) {
+        Interval interval = entry.getValue();
+        if (interval.isEmpty()) {
+          // one invalid interval disqualifies the whole state
+          return pMgr.getBooleanFormulaManager().makeFalse();
+        }
 
-      // we assume that everything is an SIGNED INTEGER
-      // and build "LOW <= X" and "X <= HIGH"
-      NumeralFormula var = nfmgr.makeVariable(entry.getKey());
-      Long low = interval.getLow();
-      Long high = interval.getHigh();
-      if (low != null && low != Long.MIN_VALUE) { // check for unbound interval
-        result.add(pMgr.makeLessOrEqual(nfmgr.makeNumber(low), var, true));
-      }
-      if (high != null && high != Long.MIN_VALUE) { // check for unbound interval
-        result.add(pMgr.makeGreaterOrEqual(nfmgr.makeNumber(high), var, true));
+        // we assume that everything is a SIGNED INTEGER
+        // and build "LOW <= X" and "X <= HIGH"
+        NumeralFormula var =
+            nfmgr.makeVariable(
+                useQualifiedVarNames
+                    ? entry.getKey()
+                    : (entry.getKey().contains("::")
+                        ? entry.getKey().substring(entry.getKey().indexOf("::") + 2)
+                        : entry.getKey()));
+        Long low = interval.getLow();
+        Long high = interval.getHigh();
+        if (low != null && low != Long.MIN_VALUE) { // check for unbound interval
+          result.add(pMgr.makeLessOrEqual(nfmgr.makeNumber(low), var, true));
+        }
+        if (high != null && high != Long.MIN_VALUE) { // check for unbound interval
+          result.add(pMgr.makeGreaterOrEqual(nfmgr.makeNumber(high), var, true));
+        }
       }
     }
     return pMgr.getBooleanFormulaManager().and(result);
@@ -416,7 +451,7 @@ public class IntervalAnalysisState
   @Override
   public Comparable<?> getPseudoPartitionKey() {
     // The size alone is not sufficient for pseudo-partitioning, if we want to use object-identity
-    // as hashcode. Thus we need a second measurement: the absolute distance of all intervals.
+    // as hashcode. Thus, we need a second measurement: the absolute distance of all intervals.
     // -> if the distance is "smaller" than the other state, we know nothing and have to compare the
     // states.
     // -> if the distance is "equal", we can compare by "identity".
@@ -445,7 +480,7 @@ public class IntervalAnalysisState
     private final int size;
     private final BigInteger absoluteDistance;
 
-    public IntervalPseudoPartitionKey(int pSize, BigInteger pAbsoluteDistance) {
+    IntervalPseudoPartitionKey(int pSize, BigInteger pAbsoluteDistance) {
       size = pSize;
       absoluteDistance = pAbsoluteDistance;
     }
