@@ -123,7 +123,7 @@ class InvariantsTransferRelation extends SingleEdgeTransferRelation {
   }
 
   private NumeralFormula<CompoundInterval> allPossibleValues(Type pType) {
-    TypeInfo typeInfo = BitVectorInfo.from(machineModel, pType);
+    TypeInfo typeInfo = TypeInfo.from(machineModel, pType);
     return InvariantsFormulaManager.INSTANCE.asConstant(
         typeInfo, getCompoundIntervalManager(typeInfo).allPossibleValues());
   }
@@ -140,8 +140,7 @@ class InvariantsTransferRelation extends SingleEdgeTransferRelation {
 
     if (compoundIntervalManagerFactory
         instanceof
-        CompoundBitVectorIntervalManagerFactory
-        compoundBitVectorIntervalManagerFactory) {
+        CompoundBitVectorIntervalManagerFactory compoundBitVectorIntervalManagerFactory) {
       compoundBitVectorIntervalManagerFactory.addOverflowEventHandler(overflowEventHandler);
     }
 
@@ -149,8 +148,7 @@ class InvariantsTransferRelation extends SingleEdgeTransferRelation {
 
     if (compoundIntervalManagerFactory
         instanceof
-        CompoundBitVectorIntervalManagerFactory
-        compoundBitVectorIntervalManagerFactory) {
+        CompoundBitVectorIntervalManagerFactory compoundBitVectorIntervalManagerFactory) {
       compoundBitVectorIntervalManagerFactory.removeOverflowEventHandler(overflowEventHandler);
     }
 
@@ -178,28 +176,16 @@ class InvariantsTransferRelation extends SingleEdgeTransferRelation {
       throws UnrecognizedCFAEdgeException, UnrecognizedCodeException {
     InvariantsState state = pState.setTypes(edgeAnalyzer.getInvolvedVariableTypes(pEdge));
     switch (pEdge.getEdgeType()) {
-      case BlankEdge:
-        break;
-      case FunctionReturnEdge:
-        state = handleFunctionReturn(state, (CFunctionReturnEdge) pEdge, pPrecision);
-        break;
-      case ReturnStatementEdge:
-        state = handleReturnStatement(state, (CReturnStatementEdge) pEdge);
-        break;
-      case AssumeEdge:
-        state = handleAssume(state, (CAssumeEdge) pEdge);
-        break;
-      case DeclarationEdge:
-        state = handleDeclaration(state, (CDeclarationEdge) pEdge);
-        break;
-      case FunctionCallEdge:
-        state = handleFunctionCall(state, (CFunctionCallEdge) pEdge);
-        break;
-      case StatementEdge:
-        state = handleStatement(state, (CStatementEdge) pEdge, pPrecision);
-        break;
-      default:
-        throw new UnrecognizedCFAEdgeException(pEdge);
+      case BlankEdge -> {}
+      case FunctionReturnEdge ->
+          state = handleFunctionReturn(state, (CFunctionReturnEdge) pEdge, pPrecision);
+      case ReturnStatementEdge ->
+          state = handleReturnStatement(state, (CReturnStatementEdge) pEdge);
+      case AssumeEdge -> state = handleAssume(state, (CAssumeEdge) pEdge);
+      case DeclarationEdge -> state = handleDeclaration(state, (CDeclarationEdge) pEdge);
+      case FunctionCallEdge -> state = handleFunctionCall(state, (CFunctionCallEdge) pEdge);
+      case StatementEdge -> state = handleStatement(state, (CStatementEdge) pEdge, pPrecision);
+      default -> throw new UnrecognizedCFAEdgeException(pEdge);
     }
     if (state != null && pPrecision != null && !pPrecision.isRelevant(pEdge)) {
       state = state.clear();
@@ -222,13 +208,13 @@ class InvariantsTransferRelation extends SingleEdgeTransferRelation {
     // Create a formula representing the edge expression
 
     BooleanFormula<CompoundInterval> assumption = null;
-    if (expression instanceof CExpression) {
+    if (expression instanceof CExpression cExpression) {
       NumeralFormula<CompoundInterval> expressionFormula =
-          ((CExpression) expression).accept(pExpressionToFormulaVisitor);
+          cExpression.accept(pExpressionToFormulaVisitor);
       assumption = compoundIntervalFormulaManager.fromNumeral(expressionFormula);
-    } else if (expression instanceof JExpression) {
+    } else if (expression instanceof JExpression jExpression) {
       NumeralFormula<CompoundInterval> expressionFormula =
-          ((JExpression) expression).accept(pExpressionToFormulaVisitor);
+          jExpression.accept(pExpressionToFormulaVisitor);
       assumption = compoundIntervalFormulaManager.fromNumeral(expressionFormula);
     } else {
       return pState;
@@ -252,11 +238,10 @@ class InvariantsTransferRelation extends SingleEdgeTransferRelation {
 
   private InvariantsState handleDeclaration(InvariantsState pElement, CDeclarationEdge pEdge)
       throws UnrecognizedCodeException {
-    if (!(pEdge.getDeclaration() instanceof CVariableDeclaration)) {
+    if (!(pEdge.getDeclaration() instanceof CVariableDeclaration decl)) {
       return pElement;
     }
 
-    CVariableDeclaration decl = (CVariableDeclaration) pEdge.getDeclaration();
     if (decl.getType().isIncomplete()) {
       // Variables of such types cannot store values, only their address can be taken.
       // We can ignore them.
@@ -264,19 +249,15 @@ class InvariantsTransferRelation extends SingleEdgeTransferRelation {
     }
 
     // Ignore unsupported types
-    if (!BitVectorInfo.isSupported(decl.getType())) {
+    if (!TypeInfo.isSupported(decl.getType())) {
       return pElement;
     }
 
-    MemoryLocation varName = MemoryLocation.parseExtendedQualifiedName(decl.getName());
-    if (!decl.isGlobal()) {
-      varName =
-          MemoryLocationExtractor.scope(decl.getName(), pEdge.getSuccessor().getFunctionName());
-    }
+    MemoryLocation varName = MemoryLocation.forDeclaration(decl);
 
     NumeralFormula<CompoundInterval> value;
-    if (decl.getInitializer() instanceof CInitializerExpression) {
-      CExpression init = ((CInitializerExpression) decl.getInitializer()).getExpression();
+    if (decl.getInitializer() instanceof CInitializerExpression cInitializerExpression) {
+      CExpression init = cInitializerExpression.getExpression();
       value = init.accept(getExpressionToFormulaVisitor(pEdge, pElement));
       if (containsArrayWildcard(value)) {
         value = toConstant(value, pElement.getEnvironment());
@@ -294,8 +275,7 @@ class InvariantsTransferRelation extends SingleEdgeTransferRelation {
       throws UnrecognizedCodeException {
 
     InvariantsState newElement = pElement;
-    List<String> formalParams = pEdge.getSuccessor().getFunctionParameterNames();
-    List<CParameterDeclaration> declarations = pEdge.getSuccessor().getFunctionParameters();
+    List<CParameterDeclaration> formalParams = pEdge.getSuccessor().getFunctionParameters();
     List<CExpression> actualParams = pEdge.getArguments();
     int limit = Math.min(formalParams.size(), actualParams.size());
 
@@ -311,7 +291,7 @@ class InvariantsTransferRelation extends SingleEdgeTransferRelation {
 
     if (limit == 1 && "__VERIFIER_assume".equals(pEdge.getSuccessor().getFunctionName())) {
       NumeralFormula<CompoundInterval> assumptionExpression =
-          actualParams.get(0).accept(actualParamExpressionToFormulaVisitor);
+          actualParams.getFirst().accept(actualParamExpressionToFormulaVisitor);
       BooleanFormula<CompoundInterval> assumption =
           compoundIntervalFormulaManager.fromNumeral(assumptionExpression);
       return handleAssumption(pElement, assumption);
@@ -320,23 +300,23 @@ class InvariantsTransferRelation extends SingleEdgeTransferRelation {
     formalParams = FluentIterable.from(formalParams).limit(limit).toList();
     actualParams = FluentIterable.from(actualParams).limit(limit).toList();
 
-    Iterator<CParameterDeclaration> declarationIterator = declarations.iterator();
-    for (Pair<String, CExpression> param : Pair.zipList(formalParams, actualParams)) {
+    for (var param : Pair.zipList(formalParams, actualParams)) {
       CExpression actualParam = param.getSecond();
-      CParameterDeclaration declaration = declarationIterator.next();
+      CParameterDeclaration declaration = param.getFirst();
 
       // Ignore unsupported types
-      if (!BitVectorInfo.isSupported(declaration.getType())) {
+      if (!TypeInfo.isSupported(declaration.getType())) {
         continue;
       }
 
       NumeralFormula<CompoundInterval> value =
-          actualParam.accept(actualParamExpressionToFormulaVisitor);
+          ExpressionToFormulaVisitor.makeCastFromArrayToPointerIfNecessary(
+                  actualParam, declaration.getType())
+              .accept(actualParamExpressionToFormulaVisitor);
       if (containsArrayWildcard(value)) {
         value = toConstant(value, pElement.getEnvironment());
       }
-      MemoryLocation formalParam =
-          MemoryLocationExtractor.scope(param.getFirst(), pEdge.getSuccessor().getFunctionName());
+      MemoryLocation formalParam = MemoryLocation.forDeclaration(declaration);
 
       value = handlePotentialOverflow(pElement, value, declaration.getType());
       newElement = newElement.assign(formalParam, value);
@@ -363,13 +343,10 @@ class InvariantsTransferRelation extends SingleEdgeTransferRelation {
       InvariantsState pElement, CStatementEdge pEdge, InvariantsPrecision pPrecision)
       throws UnrecognizedCodeException {
 
-    if (pEdge.getStatement() instanceof CFunctionCall) {
-      CExpression fn =
-          ((CFunctionCall) pEdge.getStatement())
-              .getFunctionCallExpression()
-              .getFunctionNameExpression();
-      if (fn instanceof CIdExpression) {
-        String func = ((CIdExpression) fn).getName();
+    if (pEdge.getStatement() instanceof CFunctionCall cFunctionCall) {
+      CExpression fn = cFunctionCall.getFunctionCallExpression().getFunctionNameExpression();
+      if (fn instanceof CIdExpression cIdExpression) {
+        String func = cIdExpression.getName();
         if (UNSUPPORTED_FUNCTIONS.containsKey(func)) {
           throw new UnsupportedCodeException(UNSUPPORTED_FUNCTIONS.get(func), pEdge, fn);
         }
@@ -389,7 +366,7 @@ class InvariantsTransferRelation extends SingleEdgeTransferRelation {
         CExpression functionNameExpression = cFunctionCallExpression.getFunctionNameExpression();
         if ((functionNameExpression instanceof CIdExpression idExpression)
             && idExpression.getName().equals("__VERIFIER_nondet_uint")) {
-          TypeInfo typeInfo = BitVectorInfo.from(machineModel, leftHandSide.getExpressionType());
+          TypeInfo typeInfo = TypeInfo.from(machineModel, leftHandSide.getExpressionType());
           value =
               InvariantsFormulaManager.INSTANCE.asConstant(
                   typeInfo, getCompoundIntervalManager(typeInfo).singleton(0).extendToMaxValue());
@@ -572,23 +549,23 @@ class InvariantsTransferRelation extends SingleEdgeTransferRelation {
       AFunctionDeclaration function = pCfaEdge.getSuccessor().getFunction();
       for (AExpression assumption : assumptionState.getAssumptions()) {
         AssumeEdge fakeEdge;
-        if (assumption instanceof CExpression) {
+        if (assumption instanceof CExpression cExpression) {
           fakeEdge =
               new CAssumeEdge(
                   assumption.toASTString(),
                   FileLocation.DUMMY,
                   new CFANode(function),
                   new CFANode(function),
-                  (CExpression) assumption,
+                  cExpression,
                   true);
-        } else if (assumption instanceof JExpression) {
+        } else if (assumption instanceof JExpression jExpression) {
           fakeEdge =
               new JAssumeEdge(
                   assumption.toASTString(),
                   FileLocation.DUMMY,
                   new CFANode(function),
                   new CFANode(function),
-                  (JExpression) assumption,
+                  jExpression,
                   true);
         } else {
           throw new AssertionError("unexpected expression type " + assumption);
@@ -615,8 +592,8 @@ class InvariantsTransferRelation extends SingleEdgeTransferRelation {
     CFAEdge edge = pCfaEdge;
     ALeftHandSide leftHandSide = CFAEdgeUtils.getLeftHandSide(edge);
     if (leftHandSide instanceof CPointerExpression
-        || (leftHandSide instanceof CFieldReference
-            && ((CFieldReference) leftHandSide).isPointerDereference())) {
+        || (leftHandSide instanceof CFieldReference cFieldReference
+            && cFieldReference.isPointerDereference())) {
       FluentIterable<PointerState> pointerStates =
           FluentIterable.from(pOtherElements).filter(PointerState.class);
       if (pointerStates.isEmpty()) {
