@@ -23,6 +23,7 @@ import org.junit.Test;
 import org.sosy_lab.common.configuration.Configuration;
 import org.sosy_lab.common.configuration.InvalidConfigurationException;
 import org.sosy_lab.common.log.LogManager;
+import org.sosy_lab.common.log.LogManagerWithoutDuplicates;
 import org.sosy_lab.cpachecker.cfa.ast.FileLocation;
 import org.sosy_lab.cpachecker.cfa.ast.c.CArraySubscriptExpression;
 import org.sosy_lab.cpachecker.cfa.ast.c.CBinaryExpression;
@@ -58,8 +59,11 @@ import org.sosy_lab.cpachecker.cfa.types.c.CPointerType;
 import org.sosy_lab.cpachecker.cfa.types.c.CSimpleType;
 import org.sosy_lab.cpachecker.cfa.types.c.CStorageClass;
 import org.sosy_lab.cpachecker.cfa.types.c.CType;
+import org.sosy_lab.cpachecker.cfa.types.c.CTypeQualifiers;
+import org.sosy_lab.cpachecker.cpa.smg2.SMGPrecisionAdjustment.PrecAdjustmentOptions;
 import org.sosy_lab.cpachecker.cpa.smg2.util.SMGException;
 import org.sosy_lab.cpachecker.cpa.smg2.util.SMGStateAndOptionalSMGObjectAndOffset;
+import org.sosy_lab.cpachecker.cpa.smg2.util.value.SMGCPAExpressionEvaluator;
 import org.sosy_lab.cpachecker.cpa.smg2.util.value.ValueAndSMGState;
 import org.sosy_lab.cpachecker.cpa.value.symbolic.type.SymbolicIdentifier;
 import org.sosy_lab.cpachecker.cpa.value.type.Value;
@@ -139,7 +143,7 @@ public class SMGCPATransferRelationTest {
   private static final BigInteger TEST_ARRAY_LENGTH = BigInteger.valueOf(50);
   /*
    * Declaration tests:
-   *   declare variable without value and use afterwards
+   *   declare variable without value and use afterward
    *   declare with simple value and use
    *   declare stack array and use
    *   declare stack array with value
@@ -160,10 +164,21 @@ public class SMGCPATransferRelationTest {
 
   @Before
   public void init() throws InvalidConfigurationException {
-    LogManager logManager = LogManager.createTestLogManager();
-    smgOptions = new SMGOptions(Configuration.defaultConfiguration());
+
+    LogManagerWithoutDuplicates logManager =
+        new LogManagerWithoutDuplicates(LogManager.createTestLogManager());
+    Configuration defaultOptionsNoPreciseRead =
+        Configuration.builder()
+            .copyFrom(Configuration.defaultConfiguration())
+            .setOption("cpa.smg2.preciseSMGRead", "false")
+            .build();
+    smgOptions = new SMGOptions(defaultOptionsNoPreciseRead);
+    SMGCPAExpressionEvaluator evaluator =
+        new SMGCPAExpressionEvaluator(
+            MACHINE_MODEL, logManager, SMGCPAExportOptions.getNoExportInstance(), smgOptions, null);
+
     initialState =
-        SMGState.of(MACHINE_MODEL, logManager, smgOptions)
+        SMGState.of(MACHINE_MODEL, logManager, smgOptions, evaluator, new SMGCPAStatistics())
             .copyAndAddStackFrame(CFunctionDeclaration.DUMMY);
 
     // null for the constraintsStrengthenOperator is fine as long as we don't use it in tests!
@@ -171,10 +186,12 @@ public class SMGCPATransferRelationTest {
         new SMGTransferRelation(
             logManager,
             smgOptions,
+            new PrecAdjustmentOptions(Configuration.defaultConfiguration(), null),
             SMGCPAExportOptions.getNoExportInstance(),
             MACHINE_MODEL,
             ImmutableList.of(),
-            null);
+            null,
+            evaluator);
 
     transferRelation.setInfo(
         initialState,
@@ -199,18 +216,18 @@ public class SMGCPATransferRelationTest {
     List<SMGState> statesAfterDecl =
         transferRelation.handleDeclarationEdge(
             null, declareVariableWithoutInitializer(variableName, type, false, false));
-    // Since we declare variables we know there will be only 1 state afterwards
+    // Since we declare variables we know there will be only 1 state afterward
     assertThat(statesAfterDecl).hasSize(1);
     // This state must have a local variable the size of the type used (on the current stack frame)
     // The state should not have any errors
-    SMGState state = statesAfterDecl.get(0);
+    SMGState state = statesAfterDecl.getFirst();
     // TODO: error check
     SymbolicProgramConfiguration memoryModel = state.getMemoryModel();
     assertThat(memoryModel.getStackFrames().peek().containsVariable(variableName)).isTrue();
     SMGObject memoryObject = memoryModel.getStackFrames().peek().getVariable(variableName);
     // SMG sizes are in bits! Also since this is a struct, padding has to be taken into account.
     BigInteger expectedSize = MACHINE_MODEL.getSizeofInBits(type);
-    assertThat(memoryObject.getSize()).isEqualTo(expectedSize);
+    assertThat(memoryObject.getSize().asNumericValue().bigIntegerValue()).isEqualTo(expectedSize);
     for (int i = 0; i < STRUCT_UNION_TEST_TYPES.size(); i++) {
       BigInteger offsetInBits =
           MACHINE_MODEL.getFieldOffsetInBits(
@@ -223,7 +240,7 @@ public class SMGCPATransferRelationTest {
       Preconditions.checkArgument(readValueAndState.size() == 1);
       // The read state should not have any errors
       // TODO: error check
-      assertThat(readValueAndState.get(0).getValue().isExplicitlyKnown()).isFalse();
+      assertThat(readValueAndState.getFirst().getValue().isExplicitlyKnown()).isFalse();
     }
   }
 
@@ -259,18 +276,18 @@ public class SMGCPATransferRelationTest {
     List<SMGState> statesAfterDecl =
         transferRelation.handleDeclarationEdge(
             null, declareVariableWithInitializer(variableName, type, false, false, initList));
-    // Since we declare variables we know there will be only 1 state afterwards
+    // Since we declare variables we know there will be only 1 state afterward
     assertThat(statesAfterDecl).hasSize(1);
     // This state must have a local variable the size of the type used (on the current stack frame)
     // The state should not have any errors
-    SMGState state = statesAfterDecl.get(0);
+    SMGState state = statesAfterDecl.getFirst();
     // TODO: error check
     SymbolicProgramConfiguration memoryModel = state.getMemoryModel();
     assertThat(memoryModel.getStackFrames().peek().containsVariable(variableName)).isTrue();
     SMGObject memoryObject = memoryModel.getStackFrames().peek().getVariable(variableName);
     // SMG sizes are in bits! Also since this is a struct, padding has to be taken into account.
     BigInteger expectedSize = MACHINE_MODEL.getSizeofInBits(type);
-    assertThat(memoryObject.getSize()).isEqualTo(expectedSize);
+    assertThat(memoryObject.getSize().asNumericValue().bigIntegerValue()).isEqualTo(expectedSize);
     for (int i = 0; i < STRUCT_UNION_TEST_TYPES.size(); i++) {
       BigInteger offsetInBits =
           MACHINE_MODEL.getFieldOffsetInBits(
@@ -284,10 +301,10 @@ public class SMGCPATransferRelationTest {
       Preconditions.checkArgument(readValueAndState.size() == 1);
       // The read state should not have any errors
       // TODO: error check
-      assertThat(readValueAndState.get(0).getValue().isNumericValue()).isTrue();
+      assertThat(readValueAndState.getFirst().getValue().isNumericValue()).isTrue();
       assertThat(
               readValueAndState
-                  .get(0)
+                  .getFirst()
                   .getValue()
                   .asNumericValue()
                   .bigIntegerValue()
@@ -327,18 +344,18 @@ public class SMGCPATransferRelationTest {
     List<SMGState> statesAfterDecl =
         transferRelation.handleDeclarationEdge(
             null, declareVariableWithoutInitializer(variableName, type, false, false));
-    // Since we declare variables we know there will be only 1 state afterwards
+    // Since we declare variables we know there will be only 1 state afterward
     assertThat(statesAfterDecl).hasSize(1);
     // This state must have a local variable the size of the type used (on the current stack frame)
     // The state should not have any errors
-    SMGState state = statesAfterDecl.get(0);
+    SMGState state = statesAfterDecl.getFirst();
     // TODO: error check
     SymbolicProgramConfiguration memoryModel = state.getMemoryModel();
     assertThat(memoryModel.getStackFrames().peek().containsVariable(variableName)).isTrue();
     SMGObject memoryObject = memoryModel.getStackFrames().peek().getVariable(variableName);
     // SMG sizes are in bits! Also since this is a struct, padding has to be taken into account.
     BigInteger expectedSize = MACHINE_MODEL.getSizeofInBits(type);
-    assertThat(memoryObject.getSize()).isEqualTo(expectedSize);
+    assertThat(memoryObject.getSize().asNumericValue().bigIntegerValue()).isEqualTo(expectedSize);
     // Reading is a little more tricky since this is a struct with nested structures
     // We start with the simple types
     for (int i = 0; i < STRUCT_UNION_TEST_TYPES.size(); i++) {
@@ -353,7 +370,7 @@ public class SMGCPATransferRelationTest {
       Preconditions.checkArgument(readValueAndState.size() == 1);
       // The read state should not have any errors
       // TODO: error check
-      assertThat(readValueAndState.get(0).getValue().isExplicitlyKnown()).isFalse();
+      assertThat(readValueAndState.getFirst().getValue().isExplicitlyKnown()).isFalse();
     }
 
     // Read the nested struct. We can simply assume the offsets of the simple types from above + the
@@ -375,7 +392,7 @@ public class SMGCPATransferRelationTest {
       Preconditions.checkArgument(readValueAndState.size() == 1);
       // The read state should not have any errors
       // TODO: error check
-      assertThat(readValueAndState.get(0).getValue().isExplicitlyKnown()).isFalse();
+      assertThat(readValueAndState.getFirst().getValue().isExplicitlyKnown()).isFalse();
     }
 
     // Now we repeat this for an array (they behave the same, so if one is empty, we can assume that
@@ -383,15 +400,16 @@ public class SMGCPATransferRelationTest {
     BigInteger offsetOfArrayInBits =
         MACHINE_MODEL.getFieldOffsetInBits(
             (CCompositeType) ((CElaboratedType) type).getRealType(),
-            "ARRAY_" + STRUCT_UNION_FIELD_NAMES.get(0));
-    BigInteger sizeOfArrayInBits = MACHINE_MODEL.getSizeofInBits(STRUCT_UNION_TEST_TYPES.get(0));
+            "ARRAY_" + STRUCT_UNION_FIELD_NAMES.getFirst());
+    BigInteger sizeOfArrayInBits =
+        MACHINE_MODEL.getSizeofInBits(STRUCT_UNION_TEST_TYPES.getFirst());
     for (int i = 0; i < TEST_ARRAY_LENGTH.intValue(); i++) {
       List<ValueAndSMGState> readValueAndState =
           state.readValue(memoryObject, offsetOfArrayInBits, sizeOfArrayInBits, null);
       Preconditions.checkArgument(readValueAndState.size() == 1);
       // The read state should not have any errors
       // TODO: error check
-      assertThat(readValueAndState.get(0).getValue().isExplicitlyKnown()).isFalse();
+      assertThat(readValueAndState.getFirst().getValue().isExplicitlyKnown()).isFalse();
       // increment the size onto the offset for the next element
       offsetOfArrayInBits = offsetOfArrayInBits.add(sizeOfArrayInBits);
     }
@@ -400,7 +418,7 @@ public class SMGCPATransferRelationTest {
     BigInteger offsetOfPointerInBits =
         MACHINE_MODEL.getFieldOffsetInBits(
             (CCompositeType) ((CElaboratedType) type).getRealType(),
-            "POINTER_" + STRUCT_UNION_FIELD_NAMES.get(0));
+            "POINTER_" + STRUCT_UNION_FIELD_NAMES.getFirst());
     BigInteger sizeOfPointerInBits = BigInteger.valueOf(POINTER_SIZE_IN_BITS);
     // Check a pointer value
     List<ValueAndSMGState> readValueAndState =
@@ -408,7 +426,7 @@ public class SMGCPATransferRelationTest {
     Preconditions.checkArgument(readValueAndState.size() == 1);
     // The read state should not have any errors
     // TODO: error check
-    assertThat(readValueAndState.get(0).getValue().isExplicitlyKnown()).isFalse();
+    assertThat(readValueAndState.getFirst().getValue().isExplicitlyKnown()).isFalse();
   }
 
   /*
@@ -450,18 +468,18 @@ public class SMGCPATransferRelationTest {
     List<SMGState> statesAfterDecl =
         transferRelation.handleDeclarationEdge(
             null, declareVariableWithInitializer(variableName, type, false, false, initList));
-    // Since we declare variables we know there will be only 1 state afterwards
+    // Since we declare variables we know there will be only 1 state afterward
     assertThat(statesAfterDecl).hasSize(1);
     // This state must have a local variable the size of the type used (on the current stack frame)
     // The state should not have any errors
-    SMGState state = statesAfterDecl.get(0);
+    SMGState state = statesAfterDecl.getFirst();
     // TODO: error check
     SymbolicProgramConfiguration memoryModel = state.getMemoryModel();
     assertThat(memoryModel.getStackFrames().peek().containsVariable(variableName)).isTrue();
     SMGObject memoryObject = memoryModel.getStackFrames().peek().getVariable(variableName);
     // SMG sizes are in bits! Also since this is a struct, padding has to be taken into account.
     BigInteger expectedSize = MACHINE_MODEL.getSizeofInBits(type);
-    assertThat(memoryObject.getSize()).isEqualTo(expectedSize);
+    assertThat(memoryObject.getSize().asNumericValue().bigIntegerValue()).isEqualTo(expectedSize);
     // Reading is a little more tricky since this is a struct with nested structures
     // We start with the simple types. We know that the values are 1++ after each read in order
     // except pointers which will be 0.
@@ -478,8 +496,8 @@ public class SMGCPATransferRelationTest {
       Preconditions.checkArgument(readValueAndState.size() == 1);
       // The read state should not have any errors
       // TODO: error check
-      assertThat(readValueAndState.get(0).getValue().isNumericValue()).isTrue();
-      assertThat(readValueAndState.get(0).getValue().asNumericValue().bigIntegerValue())
+      assertThat(readValueAndState.getFirst().getValue().isNumericValue()).isTrue();
+      assertThat(readValueAndState.getFirst().getValue().asNumericValue().bigIntegerValue())
           .isEquivalentAccordingToCompareTo(expectedValue);
       expectedValue = expectedValue.add(BigInteger.ONE);
     }
@@ -503,8 +521,8 @@ public class SMGCPATransferRelationTest {
       Preconditions.checkArgument(readValueAndState.size() == 1);
       // The read state should not have any errors
       // TODO: error check
-      assertThat(readValueAndState.get(0).getValue().isNumericValue()).isTrue();
-      assertThat(readValueAndState.get(0).getValue().asNumericValue().bigIntegerValue())
+      assertThat(readValueAndState.getFirst().getValue().isNumericValue()).isTrue();
+      assertThat(readValueAndState.getFirst().getValue().asNumericValue().bigIntegerValue())
           .isEquivalentAccordingToCompareTo(expectedValue);
       expectedValue = expectedValue.add(BigInteger.ONE);
     }
@@ -521,12 +539,12 @@ public class SMGCPATransferRelationTest {
         List<ValueAndSMGState> readValueAndState =
             state.readValue(memoryObject, offsetOfArrayInBits, sizeOfArrayInBits, null);
         Preconditions.checkArgument(readValueAndState.size() == 1);
-        // There is a overflow happening here! a char is filled with a too large value
+        // There is an overflow happening here! a char is filled with a too large value
         // TODO: error check
-        assertThat(readValueAndState.get(0).getValue().isNumericValue()).isTrue();
+        assertThat(readValueAndState.getFirst().getValue().isNumericValue()).isTrue();
 
         if (readValueAndState
-                .get(0)
+                .getFirst()
                 .getValue()
                 .asNumericValue()
                 .bigIntegerValue()
@@ -535,14 +553,14 @@ public class SMGCPATransferRelationTest {
           // Overflow for char
           assertThat(
                   readValueAndState
-                      .get(0)
+                      .getFirst()
                       .getValue()
                       .asNumericValue()
                       .bigIntegerValue()
                       .add(BigInteger.valueOf(256)))
               .isEquivalentAccordingToCompareTo(expectedValue);
         } else {
-          assertThat(readValueAndState.get(0).getValue().asNumericValue().bigIntegerValue())
+          assertThat(readValueAndState.getFirst().getValue().asNumericValue().bigIntegerValue())
               .isEquivalentAccordingToCompareTo(expectedValue);
         }
         expectedValue = expectedValue.add(BigInteger.ONE);
@@ -564,8 +582,8 @@ public class SMGCPATransferRelationTest {
       Preconditions.checkArgument(readValueAndState.size() == 1);
       // The read state should not have any errors
       // TODO: error check
-      assertThat(readValueAndState.get(0).getValue().isNumericValue()).isTrue();
-      assertThat(readValueAndState.get(0).getValue().asNumericValue().bigIntegerValue())
+      assertThat(readValueAndState.getFirst().getValue().isNumericValue()).isTrue();
+      assertThat(readValueAndState.getFirst().getValue().asNumericValue().bigIntegerValue())
           .isEquivalentAccordingToCompareTo(BigInteger.ZERO);
     }
   }
@@ -583,12 +601,12 @@ public class SMGCPATransferRelationTest {
               null,
               declareVariableWithoutInitializer(
                   variableName, makeArrayTypeFor(type, TEST_ARRAY_LENGTH), false, false));
-      // Since we declare variables we know there will be only 1 state afterwards
+      // Since we declare variables we know there will be only 1 state afterward
       assertThat(statesAfterDecl).hasSize(1);
       // This state must have a local variable the size of the type used (on the current stack
       // frame)
       // The state should not have any errors
-      SMGState state = statesAfterDecl.get(0);
+      SMGState state = statesAfterDecl.getFirst();
       // TODO: error check
       SymbolicProgramConfiguration memoryModel = state.getMemoryModel();
       assertThat(memoryModel.getStackFrames().peek().containsVariable(variableName)).isTrue();
@@ -596,7 +614,7 @@ public class SMGCPATransferRelationTest {
       // SMG sizes are in bits!
       BigInteger typeSize = MACHINE_MODEL.getSizeofInBits(type);
       BigInteger expectedSize = typeSize.multiply(TEST_ARRAY_LENGTH);
-      assertThat(memoryObject.getSize()).isEqualTo(expectedSize);
+      assertThat(memoryObject.getSize().asNumericValue().bigIntegerValue()).isEqualTo(expectedSize);
       // further, this memory is not written at all, meaning we can read it, and it returns UNKNOWN
       // Since this is an array, we read only the type size, but length times
       for (int i = 0; i < TEST_ARRAY_LENGTH.intValue(); i++) {
@@ -606,7 +624,7 @@ public class SMGCPATransferRelationTest {
         Preconditions.checkArgument(readValueAndState.size() == 1);
         // The read state should not have any errors
         // TODO: error check
-        assertThat(readValueAndState.get(0).getValue().isExplicitlyKnown()).isFalse();
+        assertThat(readValueAndState.getFirst().getValue().isExplicitlyKnown()).isFalse();
       }
     }
   }
@@ -638,12 +656,12 @@ public class SMGCPATransferRelationTest {
               null,
               declareVariableWithInitializer(
                   variableName, makeArrayTypeFor(type, TEST_ARRAY_LENGTH), false, false, initList));
-      // Since we declare variables we know there will be only 1 state afterwards
+      // Since we declare variables we know there will be only 1 state afterward
       assertThat(statesAfterDecl).hasSize(1);
       // This state must have a local variable the size of the type used (on the current stack
       // frame)
       // The state should not have any errors
-      SMGState state = statesAfterDecl.get(0);
+      SMGState state = statesAfterDecl.getFirst();
       // TODO: error check
       SymbolicProgramConfiguration memoryModel = state.getMemoryModel();
       assertThat(memoryModel.getStackFrames().peek().containsVariable(variableName)).isTrue();
@@ -651,7 +669,7 @@ public class SMGCPATransferRelationTest {
       // SMG sizes are in bits!
       BigInteger typeSize = MACHINE_MODEL.getSizeofInBits(type);
       BigInteger expectedSize = typeSize.multiply(TEST_ARRAY_LENGTH);
-      assertThat(memoryObject.getSize()).isEqualTo(expectedSize);
+      assertThat(memoryObject.getSize().asNumericValue().bigIntegerValue()).isEqualTo(expectedSize);
       // Check that the values match the assignment
       for (int i = 0; i < TEST_ARRAY_LENGTH.intValue(); i++) {
         BigInteger offset = BigInteger.valueOf(i).multiply(typeSize);
@@ -660,10 +678,10 @@ public class SMGCPATransferRelationTest {
         Preconditions.checkArgument(readValueAndState.size() == 1);
         // The read state should not have any errors
         // TODO: error check
-        assertThat(readValueAndState.get(0).getValue().isNumericValue()).isTrue();
+        assertThat(readValueAndState.getFirst().getValue().isNumericValue()).isTrue();
         assertThat(
                 readValueAndState
-                    .get(0)
+                    .getFirst()
                     .getValue()
                     .asNumericValue()
                     .bigIntegerValue()
@@ -685,25 +703,25 @@ public class SMGCPATransferRelationTest {
       List<SMGState> statesAfterDecl =
           transferRelation.handleDeclarationEdge(
               null, declareVariableWithoutInitializer(variableName, type, false, false));
-      // Since we declare variables we know there will be only 1 state afterwards
+      // Since we declare variables we know there will be only 1 state afterward
       assertThat(statesAfterDecl).hasSize(1);
       // This state must have a local variable the size of the type used (on the current stackframe)
       // The state should not have any errors
-      SMGState state = statesAfterDecl.get(0);
+      SMGState state = statesAfterDecl.getFirst();
       // TODO: error check
       SymbolicProgramConfiguration memoryModel = state.getMemoryModel();
       assertThat(memoryModel.getStackFrames().peek().containsVariable(variableName)).isTrue();
       SMGObject memoryObject = memoryModel.getStackFrames().peek().getVariable(variableName);
       // SMG sizes are in bits!
       BigInteger expectedSize = MACHINE_MODEL.getSizeofInBits(type);
-      assertThat(memoryObject.getSize()).isEqualTo(expectedSize);
+      assertThat(memoryObject.getSize().asNumericValue().bigIntegerValue()).isEqualTo(expectedSize);
       // further, this memory is not written at all, meaning we can read it, and it returns UNKNOWN
       List<ValueAndSMGState> readValueAndState =
           state.readValue(memoryObject, BigInteger.ZERO, expectedSize, null);
       Preconditions.checkArgument(readValueAndState.size() == 1);
       // The read state should not have any errors
       // TODO: error check
-      assertThat(readValueAndState.get(0).getValue().isExplicitlyKnown()).isFalse();
+      assertThat(readValueAndState.getFirst().getValue().isExplicitlyKnown()).isFalse();
     }
   }
 
@@ -728,27 +746,27 @@ public class SMGCPATransferRelationTest {
       List<SMGState> statesAfterDecl =
           transferRelation.handleDeclarationEdge(
               null, declareVariableWithInitializer(variableName, type, false, false, initializer));
-      // Since we declare variables we know there will be only 1 state afterwards
+      // Since we declare variables we know there will be only 1 state afterward
       assertThat(statesAfterDecl).hasSize(1);
       // This state must have a local variable the size of the type used (on the current stack
       // frame)
       // The state should not have any errors
-      SMGState state = statesAfterDecl.get(0);
+      SMGState state = statesAfterDecl.getFirst();
       // TODO: error check
       SymbolicProgramConfiguration memoryModel = state.getMemoryModel();
       assertThat(memoryModel.getStackFrames().peek().containsVariable(variableName)).isTrue();
       SMGObject memoryObject = memoryModel.getStackFrames().peek().getVariable(variableName);
       // SMG sizes are in bits!
       BigInteger expectedSize = MACHINE_MODEL.getSizeofInBits(type);
-      assertThat(memoryObject.getSize()).isEqualTo(expectedSize);
-      // further, in the memory there must be a SMGValue that maps to the Value entered
+      assertThat(memoryObject.getSize().asNumericValue().bigIntegerValue()).isEqualTo(expectedSize);
+      // further, in the memory there must be an SMGValue that maps to the Value entered
       List<ValueAndSMGState> readValueAndState =
           state.readValue(memoryObject, BigInteger.ZERO, expectedSize, null);
       Preconditions.checkArgument(readValueAndState.size() == 1);
       // The read state should not have any errors
       // TODO: error check
-      assertThat(readValueAndState.get(0).getValue().isExplicitlyKnown()).isTrue();
-      assertThat(readValueAndState.get(0).getValue().asNumericValue().bigIntegerValue())
+      assertThat(readValueAndState.getFirst().getValue().isExplicitlyKnown()).isTrue();
+      assertThat(readValueAndState.getFirst().getValue().asNumericValue().bigIntegerValue())
           .isEqualTo(value);
       // We increment the value to make them distinct
       value = value.add(BigInteger.ONE);
@@ -769,24 +787,25 @@ public class SMGCPATransferRelationTest {
       BigInteger sizeInBytes = BigInteger.valueOf(i);
 
       for (CType type : TEST_TYPES) {
-        CType pointerType = new CPointerType(false, false, type);
+        CType pointerType = new CPointerType(CTypeQualifiers.NONE, type);
 
         // Make a non-global and not external variable with the current type
         List<SMGState> statesAfterDecl =
             transferRelation.handleDeclarationEdge(
                 null, declareVariableWithoutInitializer(variableName, pointerType, false, false));
 
-        // Since we declare variables we know there will be only 1 state afterwards
+        // Since we declare variables we know there will be only 1 state afterward
         assertThat(statesAfterDecl).hasSize(1);
         // We check the variable later
-        SMGState stateAfterDecl = statesAfterDecl.get(0);
+        SMGState stateAfterDecl = statesAfterDecl.getFirst();
+        assertThat(stateAfterDecl.getMemoryModel().getSmg().checkSMGSanity()).isTrue();
 
         CFunctionCallAssignmentStatement mallocAndAssignmentExpr =
             new CFunctionCallAssignmentStatement(
                 FileLocation.DUMMY,
                 new CIdExpression(
                     FileLocation.DUMMY,
-                    new CPointerType(false, false, pointerType),
+                    new CPointerType(CTypeQualifiers.NONE, pointerType),
                     variableName,
                     declareVariableWithoutInitializer(variableName, pointerType, false, false)),
                 makeMalloc(
@@ -818,17 +837,20 @@ public class SMGCPATransferRelationTest {
           if (smgOptions.isMallocZeroReturnsZero()) {
             assertThat(
                     checkMallocFailure(
-                        statesListAfterMallocAssign.get(0), variableName, pointerType))
+                        statesListAfterMallocAssign.getFirst(), variableName, pointerType))
                 .isTrue();
           } else {
             // Non zero return
             SymbolicProgramConfiguration memoryModel =
-                statesListAfterMallocAssign.get(0).getMemoryModel();
+                statesListAfterMallocAssign.getFirst().getMemoryModel();
+
+            assertThat(memoryModel.getSmg().checkSMGSanity()).isTrue();
+
             assertThat(memoryModel.getStackFrames().peek().containsVariable(variableName)).isTrue();
             SMGObject memoryObject = memoryModel.getStackFrames().peek().getVariable(variableName);
             List<ValueAndSMGState> readValueAndState =
                 statesListAfterMallocAssign
-                    .get(0)
+                    .getFirst()
                     .readValue(
                         memoryObject,
                         BigInteger.ZERO,
@@ -837,25 +859,25 @@ public class SMGCPATransferRelationTest {
             Preconditions.checkArgument(readValueAndState.size() == 1);
             assertThat(
                     statesListAfterMallocAssign
-                        .get(0)
+                        .getFirst()
                         .getMemoryModel()
-                        .isPointer(readValueAndState.get(0).getValue()))
+                        .isPointer(readValueAndState.getFirst().getValue()))
                 .isTrue();
             SMGObject mallocMemoryObject =
                 statesListAfterMallocAssign
-                    .get(0)
-                    .getPointsToTarget(readValueAndState.get(0).getValue())
+                    .getFirst()
+                    .getPointsToTarget(readValueAndState.getFirst().getValue())
                     .orElseThrow()
                     .getSMGObject();
             assertThat(
                     statesListAfterMallocAssign
-                        .get(0)
+                        .getFirst()
                         .getMemoryModel()
                         .isObjectValid(mallocMemoryObject))
                 .isFalse();
             assertThat(
                     statesListAfterMallocAssign
-                        .get(0)
+                        .getFirst()
                         .getMemoryModel()
                         .memoryIsResultOfMallocZero(mallocMemoryObject))
                 .isTrue();
@@ -864,7 +886,7 @@ public class SMGCPATransferRelationTest {
 
         } else if (!smgOptions.isEnableMallocFailure()) {
           assertThat(statesListAfterMallocAssign).hasSize(1);
-          stateAfterMallocAssignSuccess = statesListAfterMallocAssign.get(0);
+          stateAfterMallocAssignSuccess = statesListAfterMallocAssign.getFirst();
 
         } else {
           // Malloc can fail in this case, check the additional state
@@ -873,12 +895,12 @@ public class SMGCPATransferRelationTest {
           // It might however be that this is the wrong state, we check and flip them if necessary
           SMGState stateAfterMallocAssignFailure = statesListAfterMallocAssign.get(1);
           if (!checkMallocFailure(stateAfterMallocAssignFailure, variableName, pointerType)) {
-            stateAfterMallocAssignFailure = statesListAfterMallocAssign.get(0);
+            stateAfterMallocAssignFailure = statesListAfterMallocAssign.getFirst();
             stateAfterMallocAssignSuccess = statesListAfterMallocAssign.get(1);
             assertThat(checkMallocFailure(stateAfterMallocAssignFailure, variableName, pointerType))
                 .isTrue();
           } else {
-            stateAfterMallocAssignSuccess = statesListAfterMallocAssign.get(0);
+            stateAfterMallocAssignSuccess = statesListAfterMallocAssign.getFirst();
           }
         }
         // State 1 (always the malloc succeed case) has a variable with the pointer, which has a
@@ -891,8 +913,9 @@ public class SMGCPATransferRelationTest {
         SMGObject memoryObject = memoryModel.getStackFrames().peek().getVariable(variableName);
         // SMG sizes are in bits!
         BigInteger expectedSize = MACHINE_MODEL.getSizeofInBits(pointerType);
-        assertThat(memoryObject.getSize()).isEqualTo(expectedSize);
-        // further, in the memory there must be a SMGValue that is a pointer (points to edge)
+        assertThat(memoryObject.getSize().asNumericValue().bigIntegerValue())
+            .isEqualTo(expectedSize);
+        // further, in the memory there must be an SMGValue that is a pointer (points to edge)
         // leading to the larger memory field with the size of malloc
         List<ValueAndSMGState> readValueAndState =
             stateAfterMallocAssignSuccess.readValue(
@@ -900,16 +923,21 @@ public class SMGCPATransferRelationTest {
         Preconditions.checkArgument(readValueAndState.size() == 1);
         // The read state should not have any errors
         // TODO: error check
-        assertThat(memoryModel.isPointer(readValueAndState.get(0).getValue())).isTrue();
+        assertThat(memoryModel.isPointer(readValueAndState.getFirst().getValue())).isTrue();
         SMGStateAndOptionalSMGObjectAndOffset mallocObjectAndOffset =
             stateAfterMallocAssignSuccess
-                .dereferencePointer(readValueAndState.get(0).getValue())
-                .get(0);
+                .dereferencePointer(readValueAndState.getFirst().getValue())
+                .getFirst();
         assertThat(mallocObjectAndOffset.hasSMGObjectAndOffset()).isTrue();
-        assertThat(mallocObjectAndOffset.getSMGObject().getSize())
+        assertThat(
+                mallocObjectAndOffset.getSMGObject().getSize().asNumericValue().bigIntegerValue())
             .isEqualTo(sizeInBytes.multiply(BigInteger.valueOf(8)));
         assertThat(mallocObjectAndOffset.getSMGObject().getOffset()).isEqualTo(BigInteger.ZERO);
-        assertThat(mallocObjectAndOffset.getOffsetForObject()).isEqualTo(BigInteger.ZERO);
+        assertThat(mallocObjectAndOffset.getOffsetForObject().asNumericValue().bigIntegerValue())
+            .isEqualTo(BigInteger.ZERO);
+
+        assertThat(memoryModel.getSmg().checkSMGSanity()).isTrue();
+
         // Read the SMGObject to make sure that there is no value written
         // TODO:
       }
@@ -930,7 +958,7 @@ public class SMGCPATransferRelationTest {
 
       for (CType type : TEST_TYPES) {
         for (CType sizeofType : TEST_TYPES) {
-          CType pointerType = new CPointerType(false, false, type);
+          CType pointerType = new CPointerType(CTypeQualifiers.NONE, type);
 
           CExpression binarySizeExpression =
               new CBinaryExpression(
@@ -951,7 +979,7 @@ public class SMGCPATransferRelationTest {
                               "SomeTypeNotQual",
                               "SomeTypeNotQual",
                               "SomeType",
-                              CDefaults.forType(sizeofType, FileLocation.DUMMY))),
+                              CDefaults.forType(MACHINE_MODEL, sizeofType, FileLocation.DUMMY))),
                       CUnaryExpression.UnaryOperator.SIZEOF),
                   BinaryOperator.MULTIPLY);
 
@@ -960,17 +988,17 @@ public class SMGCPATransferRelationTest {
               transferRelation.handleDeclarationEdge(
                   null, declareVariableWithoutInitializer(variableName, pointerType, false, false));
 
-          // Since we declare variables we know there will be only 1 state afterwards
+          // Since we declare variables we know there will be only 1 state afterward
           assertThat(statesAfterDecl).hasSize(1);
           // We check the variable later
-          SMGState stateAfterDecl = statesAfterDecl.get(0);
+          SMGState stateAfterDecl = statesAfterDecl.getFirst();
 
           CFunctionCallAssignmentStatement mallocAndAssignmentExpr =
               new CFunctionCallAssignmentStatement(
                   FileLocation.DUMMY,
                   new CIdExpression(
                       FileLocation.DUMMY,
-                      new CPointerType(false, false, pointerType),
+                      new CPointerType(CTypeQualifiers.NONE, pointerType),
                       variableName,
                       declareVariableWithoutInitializer(variableName, pointerType, false, false)),
                   makeMalloc(binarySizeExpression));
@@ -1007,19 +1035,19 @@ public class SMGCPATransferRelationTest {
             if (smgOptions.isMallocZeroReturnsZero()) {
               assertThat(
                       checkMallocFailure(
-                          statesListAfterMallocAssign.get(0), variableName, pointerType))
+                          statesListAfterMallocAssign.getFirst(), variableName, pointerType))
                   .isTrue();
             } else {
               // Non 0, invalid memory
               SymbolicProgramConfiguration memoryModel =
-                  statesListAfterMallocAssign.get(0).getMemoryModel();
+                  statesListAfterMallocAssign.getFirst().getMemoryModel();
               assertThat(memoryModel.getStackFrames().peek().containsVariable(variableName))
                   .isTrue();
               SMGObject memoryObject =
                   memoryModel.getStackFrames().peek().getVariable(variableName);
               List<ValueAndSMGState> readValueAndState =
                   statesListAfterMallocAssign
-                      .get(0)
+                      .getFirst()
                       .readValue(
                           memoryObject,
                           BigInteger.ZERO,
@@ -1028,25 +1056,25 @@ public class SMGCPATransferRelationTest {
               Preconditions.checkArgument(readValueAndState.size() == 1);
               assertThat(
                       statesListAfterMallocAssign
-                          .get(0)
+                          .getFirst()
                           .getMemoryModel()
-                          .isPointer(readValueAndState.get(0).getValue()))
+                          .isPointer(readValueAndState.getFirst().getValue()))
                   .isTrue();
               SMGObject mallocMemoryObject =
                   statesListAfterMallocAssign
-                      .get(0)
-                      .getPointsToTarget(readValueAndState.get(0).getValue())
+                      .getFirst()
+                      .getPointsToTarget(readValueAndState.getFirst().getValue())
                       .orElseThrow()
                       .getSMGObject();
               assertThat(
                       statesListAfterMallocAssign
-                          .get(0)
+                          .getFirst()
                           .getMemoryModel()
                           .isObjectValid(mallocMemoryObject))
                   .isFalse();
               assertThat(
                       statesListAfterMallocAssign
-                          .get(0)
+                          .getFirst()
                           .getMemoryModel()
                           .memoryIsResultOfMallocZero(mallocMemoryObject))
                   .isTrue();
@@ -1055,7 +1083,7 @@ public class SMGCPATransferRelationTest {
 
           } else if (!smgOptions.isEnableMallocFailure()) {
             assertThat(statesListAfterMallocAssign).hasSize(1);
-            stateAfterMallocAssignSuccess = statesListAfterMallocAssign.get(0);
+            stateAfterMallocAssignSuccess = statesListAfterMallocAssign.getFirst();
 
           } else {
             // Malloc can fail in this case, check the additional state
@@ -1064,13 +1092,13 @@ public class SMGCPATransferRelationTest {
             // It might however be that this is the wrong state, we check and flip them if necessary
             SMGState stateAfterMallocAssignFailure = statesListAfterMallocAssign.get(1);
             if (!checkMallocFailure(stateAfterMallocAssignFailure, variableName, pointerType)) {
-              stateAfterMallocAssignFailure = statesListAfterMallocAssign.get(0);
+              stateAfterMallocAssignFailure = statesListAfterMallocAssign.getFirst();
               stateAfterMallocAssignSuccess = statesListAfterMallocAssign.get(1);
               assertThat(
                       checkMallocFailure(stateAfterMallocAssignFailure, variableName, pointerType))
                   .isTrue();
             } else {
-              stateAfterMallocAssignSuccess = statesListAfterMallocAssign.get(0);
+              stateAfterMallocAssignSuccess = statesListAfterMallocAssign.getFirst();
             }
           }
           // State 1 (always the malloc succeed case) has a variable with the pointer, which has a
@@ -1084,8 +1112,9 @@ public class SMGCPATransferRelationTest {
           SMGObject memoryObject = memoryModel.getStackFrames().peek().getVariable(variableName);
           // SMG sizes are in bits!
           BigInteger expectedSize = MACHINE_MODEL.getSizeofInBits(pointerType);
-          assertThat(memoryObject.getSize()).isEqualTo(expectedSize);
-          // further, in the memory there must be a SMGValue that is a pointer (points to edge)
+          assertThat(memoryObject.getSize().asNumericValue().bigIntegerValue())
+              .isEqualTo(expectedSize);
+          // further, in the memory there must be an SMGValue that is a pointer (points to edge)
           // leading to the larger memory field with the size of malloc
           List<ValueAndSMGState> readValueAndState =
               stateAfterMallocAssignSuccess.readValue(
@@ -1093,20 +1122,22 @@ public class SMGCPATransferRelationTest {
           Preconditions.checkArgument(readValueAndState.size() == 1);
           // The read state should not have any errors
           // TODO: error check
-          assertThat(memoryModel.isPointer(readValueAndState.get(0).getValue())).isTrue();
+          assertThat(memoryModel.isPointer(readValueAndState.getFirst().getValue())).isTrue();
           SMGStateAndOptionalSMGObjectAndOffset mallocObjectAndOffset =
               stateAfterMallocAssignSuccess
-                  .dereferencePointer(readValueAndState.get(0).getValue())
-                  .get(0);
+                  .dereferencePointer(readValueAndState.getFirst().getValue())
+                  .getFirst();
           assertThat(mallocObjectAndOffset.hasSMGObjectAndOffset()).isTrue();
           BigInteger expectedMemorySizeInBits =
               sizeMultiplikator
                   .multiply(BigInteger.valueOf(8))
                   .multiply(MACHINE_MODEL.getSizeof(sizeofType));
-          assertThat(mallocObjectAndOffset.getSMGObject().getSize())
+          assertThat(
+                  mallocObjectAndOffset.getSMGObject().getSize().asNumericValue().bigIntegerValue())
               .isEqualTo(expectedMemorySizeInBits);
           assertThat(mallocObjectAndOffset.getSMGObject().getOffset()).isEqualTo(BigInteger.ZERO);
-          assertThat(mallocObjectAndOffset.getOffsetForObject()).isEqualTo(BigInteger.ZERO);
+          assertThat(mallocObjectAndOffset.getOffsetForObject().asNumericValue().bigIntegerValue())
+              .isEqualTo(BigInteger.ZERO);
           // Read the SMGObject to make sure that there is no value written
           // TODO:
         }
@@ -1129,8 +1160,8 @@ public class SMGCPATransferRelationTest {
     SMGObject memoryObject = memoryModel.getStackFrames().peek().getVariable(variableName);
     // SMG sizes are in bits!
     BigInteger expectedSize = MACHINE_MODEL.getSizeofInBits(pointerType);
-    assertThat(memoryObject.getSize()).isEqualTo(expectedSize);
-    // further, in the memory there must be a SMGValue that is a pointer (points to edge)
+    assertThat(memoryObject.getSize().asNumericValue().bigIntegerValue()).isEqualTo(expectedSize);
+    // further, in the memory there must be an SMGValue that is a pointer (points to edge)
     // leading to the larger memory field with the size of malloc
     List<ValueAndSMGState> readValueAndState =
         stateAfterMallocAssignFailure.readValue(memoryObject, BigInteger.ZERO, expectedSize, null);
@@ -1138,14 +1169,15 @@ public class SMGCPATransferRelationTest {
     // The read state should not have any errors
     // TODO: error check
     // If now the read value is not numeric (!= 0) it can't be a malloc failure
-    if (!readValueAndState.get(0).getValue().isNumericValue()) {
+    if (!readValueAndState.getFirst().getValue().isNumericValue()) {
       return false;
     }
 
-    assertThat(readValueAndState.get(0).getValue().isNumericValue()).isTrue();
-    assertThat(readValueAndState.get(0).getValue().asNumericValue().bigIntegerValue())
+    assertThat(readValueAndState.getFirst().getValue().isNumericValue()).isTrue();
+    assertThat(readValueAndState.getFirst().getValue().asNumericValue().bigIntegerValue())
         .isEqualTo(BigInteger.ZERO);
-    assertThat(memoryModel.getSMGValueFromValue(readValueAndState.get(0).getValue()).orElseThrow())
+    assertThat(
+            memoryModel.getSMGValueFromValue(readValueAndState.getFirst().getValue()).orElseThrow())
         .isEqualTo(SMGValue.zeroValue());
     return true;
   }
@@ -1181,7 +1213,7 @@ public class SMGCPATransferRelationTest {
       // SMG sizes are in bits!
       BigInteger expectedTypeSizeInBits = MACHINE_MODEL.getSizeofInBits(testType);
       // The size of the variable is the array size as it is on the stack
-      assertThat(memoryObject.getSize())
+      assertThat(memoryObject.getSize().asNumericValue().bigIntegerValue())
           .isEqualTo(expectedTypeSizeInBits.multiply(TEST_ARRAY_LENGTH));
 
       for (int i = 0; i < TEST_ARRAY_LENGTH.intValue(); i++) {
@@ -1192,7 +1224,7 @@ public class SMGCPATransferRelationTest {
         // The read state should not have any errors
         // TODO: error check
         // The value should be numeric
-        assertThat(readValueAndState.get(0).getValue().isNumericValue()).isTrue();
+        assertThat(readValueAndState.getFirst().getValue().isNumericValue()).isTrue();
 
         // Check the value (chars are also numerically saved!)
         BigInteger expectedValue;
@@ -1202,7 +1234,7 @@ public class SMGCPATransferRelationTest {
         } else {
           expectedValue = BigInteger.valueOf(i);
         }
-        assertThat(readValueAndState.get(0).getValue().asNumericValue().bigIntegerValue())
+        assertThat(readValueAndState.getFirst().getValue().asNumericValue().bigIntegerValue())
             .isEqualTo(expectedValue);
       }
     }
@@ -1240,21 +1272,28 @@ public class SMGCPATransferRelationTest {
       // SMG sizes are in bits!
       BigInteger expectedTypeSizeInBits = MACHINE_MODEL.getSizeofInBits(testType);
       // The size of the variable is the size of a pointer
-      assertThat(memoryObject.getSize()).isEqualTo(BigInteger.valueOf(POINTER_SIZE_IN_BITS));
+      assertThat(memoryObject.getSize().asNumericValue().bigIntegerValue())
+          .isEqualTo(BigInteger.valueOf(POINTER_SIZE_IN_BITS));
       // Read the address from the variable and then dereference the pointer
       List<ValueAndSMGState> readAddressValueAndState =
           stateWithArray.readValue(
               memoryObject, BigInteger.ZERO, BigInteger.valueOf(POINTER_SIZE_IN_BITS), null);
       Preconditions.checkArgument(readAddressValueAndState.size() == 1);
-      Value address = readAddressValueAndState.get(0).getValue();
+      Value address = readAddressValueAndState.getFirst().getValue();
       // TODO: address this type thing
       assertThat(address).isInstanceOf(SymbolicIdentifier.class);
       SMGStateAndOptionalSMGObjectAndOffset maybeTargetOfPointer =
-          stateWithArray.dereferencePointer(address).get(0);
+          stateWithArray.dereferencePointer(address).getFirst();
       assertThat(maybeTargetOfPointer.hasSMGObjectAndOffset()).isTrue();
       SMGStateAndOptionalSMGObjectAndOffset targetOfPointer = maybeTargetOfPointer;
       // The offset of the address should be 0
-      assertThat(targetOfPointer.getOffsetForObject().compareTo(BigInteger.ZERO)).isEqualTo(0);
+      assertThat(
+              targetOfPointer
+                  .getOffsetForObject()
+                  .asNumericValue()
+                  .bigIntegerValue()
+                  .compareTo(BigInteger.ZERO))
+          .isEqualTo(0);
       SMGObject arrayMemoryObject = targetOfPointer.getSMGObject();
       // The object is not 0
       assertThat(arrayMemoryObject.isZero()).isFalse();
@@ -1266,7 +1305,7 @@ public class SMGCPATransferRelationTest {
         // The read state should not have any errors
         // TODO: error check
         // The value should be numeric
-        assertThat(readValueAndState.get(0).getValue().isNumericValue()).isTrue();
+        assertThat(readValueAndState.getFirst().getValue().isNumericValue()).isTrue();
 
         // Check the value (chars are also numerically saved!)
         BigInteger expectedValue;
@@ -1278,7 +1317,7 @@ public class SMGCPATransferRelationTest {
         }
         assertThat(
                 readValueAndState
-                        .get(0)
+                        .getFirst()
                         .getValue()
                         .asNumericValue()
                         .bigIntegerValue()
@@ -1327,7 +1366,14 @@ public class SMGCPATransferRelationTest {
       SMGObject memoryObject = memoryModel.getStackFrames().peek().getVariable(variableName);
       // The size of the variable is the size of the struct
       BigInteger sizeOfStructInBits = MACHINE_MODEL.getSizeofInBits(structType);
-      assertThat(memoryObject.getSize().compareTo(sizeOfStructInBits) == 0).isTrue();
+      assertThat(
+              memoryObject
+                      .getSize()
+                      .asNumericValue()
+                      .bigIntegerValue()
+                      .compareTo(sizeOfStructInBits)
+                  == 0)
+          .isTrue();
       // The object is not 0
       assertThat(memoryObject.isZero()).isFalse();
 
@@ -1345,7 +1391,7 @@ public class SMGCPATransferRelationTest {
         // The read state should not have any errors
         // TODO: error check
         // The value should be numeric
-        assertThat(readValueAndState.get(0).getValue().isNumericValue()).isTrue();
+        assertThat(readValueAndState.getFirst().getValue().isNumericValue()).isTrue();
 
         assertThat(currentFieldType instanceof CSimpleType).isTrue();
         // Check the value (chars are also numerically saved!)
@@ -1358,7 +1404,7 @@ public class SMGCPATransferRelationTest {
         }
         assertThat(
                 readValueAndState
-                        .get(0)
+                        .getFirst()
                         .getValue()
                         .asNumericValue()
                         .bigIntegerValue()
@@ -1403,21 +1449,33 @@ public class SMGCPATransferRelationTest {
       assertThat(memoryModel.getStackFrames().peek().containsVariable(variableName)).isTrue();
       SMGObject memoryObject = memoryModel.getStackFrames().peek().getVariable(variableName);
       // The size of the variable is the size of a pointer
-      assertThat(memoryObject.getSize().compareTo(BigInteger.valueOf(POINTER_SIZE_IN_BITS)) == 0)
+      assertThat(
+              memoryObject
+                      .getSize()
+                      .asNumericValue()
+                      .bigIntegerValue()
+                      .compareTo(BigInteger.valueOf(POINTER_SIZE_IN_BITS))
+                  == 0)
           .isTrue();
       // Read the address from the variable and then dereference the pointer
       List<ValueAndSMGState> readAddressValueAndState =
           stateWithStruct.readValue(
               memoryObject, BigInteger.ZERO, BigInteger.valueOf(POINTER_SIZE_IN_BITS), null);
       Preconditions.checkArgument(readAddressValueAndState.size() == 1);
-      Value address = readAddressValueAndState.get(0).getValue();
+      Value address = readAddressValueAndState.getFirst().getValue();
       assertThat(address).isInstanceOf(SymbolicIdentifier.class);
       SMGStateAndOptionalSMGObjectAndOffset maybeTargetOfPointer =
-          stateWithStruct.dereferencePointer(address).get(0);
+          stateWithStruct.dereferencePointer(address).getFirst();
       assertThat(maybeTargetOfPointer.hasSMGObjectAndOffset()).isTrue();
       SMGStateAndOptionalSMGObjectAndOffset targetOfPointer = maybeTargetOfPointer;
       // The offset of the address should be 0
-      assertThat(targetOfPointer.getOffsetForObject().compareTo(BigInteger.ZERO)).isEqualTo(0);
+      assertThat(
+              targetOfPointer
+                  .getOffsetForObject()
+                  .asNumericValue()
+                  .bigIntegerValue()
+                  .compareTo(BigInteger.ZERO))
+          .isEqualTo(0);
       SMGObject arrayMemoryObject = targetOfPointer.getSMGObject();
       // The object is not 0
       assertThat(arrayMemoryObject.isZero()).isFalse();
@@ -1435,7 +1493,7 @@ public class SMGCPATransferRelationTest {
         // The read state should not have any errors
         // TODO: error check
         // The value should be numeric
-        assertThat(readValueAndState.get(0).getValue().isNumericValue()).isTrue();
+        assertThat(readValueAndState.getFirst().getValue().isNumericValue()).isTrue();
 
         assertThat(currentFieldType).isInstanceOf(CSimpleType.class);
         // Check the value (chars are also numerically saved!)
@@ -1446,7 +1504,7 @@ public class SMGCPATransferRelationTest {
         } else {
           expectedValue = BigInteger.valueOf(i);
         }
-        assertThat(readValueAndState.get(0).getValue().asNumericValue().bigIntegerValue())
+        assertThat(readValueAndState.getFirst().getValue().asNumericValue().bigIntegerValue())
             .isEqualTo(expectedValue);
       }
     }
@@ -1480,7 +1538,8 @@ public class SMGCPATransferRelationTest {
         SMGObject memoryObject = memoryModel.getStackFrames().peek().getVariable(variableNamePlus);
         // The size of the variable is the size of the type
         BigInteger expectedTypeSizeInBits = MACHINE_MODEL.getSizeofInBits(type);
-        assertThat(memoryObject.getSize()).isEqualTo(expectedTypeSizeInBits);
+        assertThat(memoryObject.getSize().asNumericValue().bigIntegerValue())
+            .isEqualTo(expectedTypeSizeInBits);
 
         List<ValueAndSMGState> readValueAndState =
             stateWithStruct.readValue(memoryObject, BigInteger.ZERO, expectedTypeSizeInBits, null);
@@ -1488,9 +1547,9 @@ public class SMGCPATransferRelationTest {
         // The read state should not have any errors
         // TODO: error check
         // The value should be numeric
-        assertThat(readValueAndState.get(0).getValue().isNumericValue()).isTrue();
+        assertThat(readValueAndState.getFirst().getValue().isNumericValue()).isTrue();
 
-        assertThat(readValueAndState.get(0).getValue().asNumericValue().bigIntegerValue())
+        assertThat(readValueAndState.getFirst().getValue().asNumericValue().bigIntegerValue())
             .isEqualTo(value);
       }
     }
@@ -1628,26 +1687,26 @@ public class SMGCPATransferRelationTest {
               INT_TYPE,
               new CIdExpression(
                   FileLocation.DUMMY,
-                  new CPointerType(false, false, structType),
+                  new CPointerType(CTypeQualifiers.NONE, structType),
                   variableName1,
                   new CVariableDeclaration(
                       FileLocation.DUMMY,
                       false,
                       CStorageClass.AUTO,
-                      new CPointerType(false, false, structType),
+                      new CPointerType(CTypeQualifiers.NONE, structType),
                       variableName1,
                       variableName1,
                       variableName1,
                       null)),
               new CIdExpression(
                   FileLocation.DUMMY,
-                  new CPointerType(false, false, structType),
+                  new CPointerType(CTypeQualifiers.NONE, structType),
                   variableName2,
                   new CVariableDeclaration(
                       FileLocation.DUMMY,
                       false,
                       CStorageClass.AUTO,
-                      new CPointerType(false, false, structType),
+                      new CPointerType(CTypeQualifiers.NONE, structType),
                       variableName2,
                       variableName2,
                       variableName2,
@@ -1696,26 +1755,26 @@ public class SMGCPATransferRelationTest {
               INT_TYPE,
               new CIdExpression(
                   FileLocation.DUMMY,
-                  new CPointerType(false, false, testType),
+                  new CPointerType(CTypeQualifiers.NONE, testType),
                   variableName1,
                   new CVariableDeclaration(
                       FileLocation.DUMMY,
                       false,
                       CStorageClass.AUTO,
-                      new CPointerType(false, false, testType),
+                      new CPointerType(CTypeQualifiers.NONE, testType),
                       variableName1,
                       variableName1,
                       variableName1,
                       null)),
               new CIdExpression(
                   FileLocation.DUMMY,
-                  new CPointerType(false, false, testType),
+                  new CPointerType(CTypeQualifiers.NONE, testType),
                   variableName2,
                   new CVariableDeclaration(
                       FileLocation.DUMMY,
                       false,
                       CStorageClass.AUTO,
-                      new CPointerType(false, false, testType),
+                      new CPointerType(CTypeQualifiers.NONE, testType),
                       variableName2,
                       variableName2,
                       variableName2,
@@ -1845,12 +1904,12 @@ public class SMGCPATransferRelationTest {
     List<SMGState> statesAfterDecl =
         transferRelation.handleDeclarationEdge(
             null, declareVariableWithInitializer(variableName, type, false, false, initializer));
-    // Since we declare variables we know there will be only 1 state afterwards
+    // Since we declare variables we know there will be only 1 state afterward
     assertThat(statesAfterDecl).hasSize(1);
     // This state must have a local variable the size of the type used (on the current stack
     // frame)
     // The state should not have any errors
-    SMGState state = statesAfterDecl.get(0);
+    SMGState state = statesAfterDecl.getFirst();
     // Technically the Edge is always wrong. This influences only error detection, however.
     transferRelation.setInfo(
         state,
@@ -1890,12 +1949,12 @@ public class SMGCPATransferRelationTest {
     List<SMGState> statesAfterDecl =
         transferRelation.handleDeclarationEdge(
             null, declareVariableWithInitializer(variableName, arrayType, false, false, initList));
-    // Since we declare variables we know there will be only 1 state afterwards
+    // Since we declare variables we know there will be only 1 state afterward
     assertThat(statesAfterDecl).hasSize(1);
     // This state must have a local variable the size of the type used (on the current stack
     // frame)
     // The state should not have any errors
-    SMGState state = statesAfterDecl.get(0);
+    SMGState state = statesAfterDecl.getFirst();
     // Technically the Edge is always wrong. This influences only error detection, however.
     transferRelation.setInfo(
         state,
@@ -1945,7 +2004,7 @@ public class SMGCPATransferRelationTest {
 
       Collection<SMGState> statesAfterAssign =
           transferRelation.handleStatementEdge(null, assignmentExpr);
-      // Since we assign variables we know there will be only 1 state afterwards
+      // Since we assign variables we know there will be only 1 state afterward
       assertThat(statesAfterAssign).hasSize(1);
       SMGState newState = state;
       for (SMGState stateAS : statesAfterAssign) {
@@ -1973,7 +2032,7 @@ public class SMGCPATransferRelationTest {
   private SMGState declareArrayVariableWithSimpleTypeWithValuesOnTheHeap(
       int size, BigInteger[] values, String variableName, CType type) throws CPATransferException {
     Preconditions.checkArgument(values.length == size);
-    CType pointerType = new CPointerType(false, false, type);
+    CType pointerType = new CPointerType(CTypeQualifiers.NONE, type);
 
     CExpression sizeExpression =
         new CIntegerLiteralExpression(
@@ -1986,10 +2045,10 @@ public class SMGCPATransferRelationTest {
         transferRelation.handleDeclarationEdge(
             null, declareVariableWithoutInitializer(variableName, pointerType, false, false));
 
-    // Since we declare variables we know there will be only 1 state afterwards
+    // Since we declare variables we know there will be only 1 state afterward
     assertThat(statesAfterDecl).hasSize(1);
     // We check the variable later
-    SMGState stateAfterDecl = statesAfterDecl.get(0);
+    SMGState stateAfterDecl = statesAfterDecl.getFirst();
 
     CFunctionCallAssignmentStatement mallocAndAssignmentExpr =
         new CFunctionCallAssignmentStatement(
@@ -2026,7 +2085,7 @@ public class SMGCPATransferRelationTest {
       // either its malloc(0) which is always a single null pointer, or its just 1 valid state
       // If malloc(0) happens we still use the state in the transferRelation
       assertThat(statesListAfterMallocAssign).hasSize(1);
-      stateAfterMallocAssignSuccess = statesListAfterMallocAssign.get(0);
+      stateAfterMallocAssignSuccess = statesListAfterMallocAssign.getFirst();
 
     } else {
       // Malloc can fail in this case, check the additional state
@@ -2035,12 +2094,12 @@ public class SMGCPATransferRelationTest {
       // It might however be that this is the wrong state, we check and flip them if necessary
       SMGState stateAfterMallocAssignFailure = statesListAfterMallocAssign.get(1);
       if (!checkMallocFailure(stateAfterMallocAssignFailure, variableName, pointerType)) {
-        stateAfterMallocAssignFailure = statesListAfterMallocAssign.get(0);
+        stateAfterMallocAssignFailure = statesListAfterMallocAssign.getFirst();
         stateAfterMallocAssignSuccess = statesListAfterMallocAssign.get(1);
         assertThat(checkMallocFailure(stateAfterMallocAssignFailure, variableName, pointerType))
             .isTrue();
       } else {
-        stateAfterMallocAssignSuccess = statesListAfterMallocAssign.get(0);
+        stateAfterMallocAssignSuccess = statesListAfterMallocAssign.getFirst();
       }
     }
     transferRelation.setInfo(
@@ -2075,13 +2134,13 @@ public class SMGCPATransferRelationTest {
                   type,
                   new CIdExpression(
                       FileLocation.DUMMY,
-                      new CPointerType(false, false, type),
+                      new CPointerType(CTypeQualifiers.NONE, type),
                       variableName,
                       new CVariableDeclaration(
                           FileLocation.DUMMY,
                           false,
                           CStorageClass.AUTO,
-                          new CPointerType(false, false, type),
+                          new CPointerType(CTypeQualifiers.NONE, type),
                           variableName,
                           variableName,
                           variableName,
@@ -2092,7 +2151,7 @@ public class SMGCPATransferRelationTest {
 
       Collection<SMGState> statesAfterAssign =
           transferRelation.handleStatementEdge(null, assignmentExpr);
-      // Since we assign variables we know there will be only 1 state afterwards
+      // Since we assign variables we know there will be only 1 state afterward
       assertThat(statesAfterAssign).hasSize(1);
       SMGState newState = lastState;
       for (SMGState stateAS : statesAfterAssign) {
@@ -2139,11 +2198,11 @@ public class SMGCPATransferRelationTest {
     List<SMGState> statesAfterDecl =
         transferRelation.handleDeclarationEdge(
             null, declareVariableWithInitializer(variableName, structType, false, false, initList));
-    // Since we declare variables we know there will be only 1 state afterwards
+    // Since we declare variables we know there will be only 1 state afterward
     assertThat(statesAfterDecl).hasSize(1);
     // This state must have a local variable the size of the type used (on the current stack frame)
     // The state should not have any errors
-    SMGState state = statesAfterDecl.get(0);
+    SMGState state = statesAfterDecl.getFirst();
     // Technically the Edge is always wrong. This influences only error detection, however.
     transferRelation.setInfo(
         state,
@@ -2156,14 +2215,14 @@ public class SMGCPATransferRelationTest {
   /*
    * Declare a struct with the types entered, the values entered in the order entered on the heap.
    * Then a variable with the address of this array is made with the variableName. This uses the ->
-   * operator. But the SMG2 CPA translates this always to (struct*).field so its the same.
+   * operator. But the SMG2 CPA translates this always to (struct*).field so it's the same.
    * Returns the last state acquired, but also sets the transfer relation with this state, so it can be ignored.
    *
    * This is tested in a dedicated test and therefore save to use in other tests!
    */
   private SMGState declareStructVariableWithSimpleTypeWithValuesOnTheHeap(
       BigInteger[] values, String variableName, CType type) throws CPATransferException {
-    CType pointerType = new CPointerType(false, false, type);
+    CType pointerType = new CPointerType(CTypeQualifiers.NONE, type);
 
     CExpression sizeExpression =
         new CIntegerLiteralExpression(FileLocation.DUMMY, INT_TYPE, MACHINE_MODEL.getSizeof(type));
@@ -2173,17 +2232,17 @@ public class SMGCPATransferRelationTest {
         transferRelation.handleDeclarationEdge(
             null, declareVariableWithoutInitializer(variableName, pointerType, false, false));
 
-    // Since we declare variables we know there will be only 1 state afterwards
+    // Since we declare variables we know there will be only 1 state afterward
     assertThat(statesAfterDecl).hasSize(1);
     // We check the variable later
-    SMGState stateAfterDecl = statesAfterDecl.get(0);
+    SMGState stateAfterDecl = statesAfterDecl.getFirst();
 
     CFunctionCallAssignmentStatement mallocAndAssignmentExpr =
         new CFunctionCallAssignmentStatement(
             FileLocation.DUMMY,
             new CIdExpression(
                 FileLocation.DUMMY,
-                new CPointerType(false, false, pointerType),
+                new CPointerType(CTypeQualifiers.NONE, pointerType),
                 variableName,
                 declareVariableWithoutInitializer(variableName, pointerType, false, false)),
             makeMalloc(sizeExpression));
@@ -2214,7 +2273,7 @@ public class SMGCPATransferRelationTest {
       // either its malloc(0) which is always a single null pointer, or its just 1 valid state
       // If malloc(0) happens we still use the state in the transferRelation
       assertThat(statesListAfterMallocAssign).hasSize(1);
-      stateAfterMallocAssignSuccess = statesListAfterMallocAssign.get(0);
+      stateAfterMallocAssignSuccess = statesListAfterMallocAssign.getFirst();
 
     } else {
       // Malloc can fail in this case, check the additional state
@@ -2223,12 +2282,12 @@ public class SMGCPATransferRelationTest {
       // It might however be that this is the wrong state, we check and flip them if necessary
       SMGState stateAfterMallocAssignFailure = statesListAfterMallocAssign.get(1);
       if (!checkMallocFailure(stateAfterMallocAssignFailure, variableName, pointerType)) {
-        stateAfterMallocAssignFailure = statesListAfterMallocAssign.get(0);
+        stateAfterMallocAssignFailure = statesListAfterMallocAssign.getFirst();
         stateAfterMallocAssignSuccess = statesListAfterMallocAssign.get(1);
         assertThat(checkMallocFailure(stateAfterMallocAssignFailure, variableName, pointerType))
             .isTrue();
       } else {
-        stateAfterMallocAssignSuccess = statesListAfterMallocAssign.get(0);
+        stateAfterMallocAssignSuccess = statesListAfterMallocAssign.getFirst();
       }
     }
     transferRelation.setInfo(stateAfterMallocAssignSuccess, null, mallocAndAssignmentEdge);
@@ -2285,7 +2344,7 @@ public class SMGCPATransferRelationTest {
       Collection<SMGState> statesAfterAssign =
           transferRelation.handleStatementEdge(null, assignExpr);
 
-      // Since we assign variables we know there will be only 1 state afterwards
+      // Since we assign variables we know there will be only 1 state afterward
       assertThat(statesAfterAssign).hasSize(1);
       SMGState stateAfterAssign = stateAfterDecl;
       for (SMGState stateAS : statesAfterAssign) {
@@ -2365,13 +2424,17 @@ public class SMGCPATransferRelationTest {
     }
     CCompositeType realType =
         new CCompositeType(
-            false, false, complexTypeKind, typeBuilder.build(), structureName, structureName);
+            CTypeQualifiers.NONE,
+            complexTypeKind,
+            typeBuilder.build(),
+            structureName,
+            structureName);
     return new CElaboratedType(
-        false, false, complexTypeKind, structureName, structureName, realType);
+        CTypeQualifiers.NONE, complexTypeKind, structureName, structureName, realType);
   }
 
   private CType makeArrayTypeFor(CType elementType, CExpression length) {
-    return new CArrayType(false, false, elementType, length);
+    return new CArrayType(CTypeQualifiers.NONE, elementType, length);
   }
 
   private CType makeArrayTypeFor(CType elementType, BigInteger length) {
@@ -2380,7 +2443,7 @@ public class SMGCPATransferRelationTest {
   }
 
   private CType makePointerTypeFor(CType pointerType) {
-    return new CPointerType(false, false, pointerType);
+    return new CPointerType(CTypeQualifiers.NONE, pointerType);
   }
 
   private CInitializer makeCInitializerExpressionFor(CExpression expr) {
