@@ -28,13 +28,14 @@ import org.sosy_lab.cpachecker.core.defaults.AutomaticCPAFactory;
 import org.sosy_lab.cpachecker.core.defaults.DelegateAbstractDomain;
 import org.sosy_lab.cpachecker.core.interfaces.AbstractState;
 import org.sosy_lab.cpachecker.core.interfaces.CPAFactory;
+import org.sosy_lab.cpachecker.core.interfaces.ConfigurableProgramAnalysisWithBAM;
 import org.sosy_lab.cpachecker.core.interfaces.StateSpacePartition;
 import org.sosy_lab.cpachecker.core.interfaces.TransferRelation;
 import org.sosy_lab.cpachecker.cpa.testtargets.reduction.TestTargetAdaption;
 import org.sosy_lab.cpachecker.util.CFAUtils;
 
 @Options(prefix = "testcase")
-public class TestTargetCPA extends AbstractCPA {
+public class TestTargetCPA extends AbstractCPA implements ConfigurableProgramAnalysisWithBAM {
 
   private final TestTargetPrecisionAdjustment precisionAdjustment;
   private final TransferRelation transferRelation;
@@ -124,7 +125,7 @@ public class TestTargetCPA extends AbstractCPA {
     List<String> components = Splitter.on('#').splitToList(targetEdge);
     if (components.size() > 1) {
       try {
-        int predNum = Integer.parseInt(components.get(0));
+        int predNum = Integer.parseInt(components.getFirst());
         int edgeID = Integer.parseInt(components.get(1));
         Optional<CFANode> pred =
             pCfa.nodes().stream().filter(node -> (node.getNodeNumber() == predNum)).findFirst();
