@@ -22,7 +22,6 @@ import com.google.common.collect.Iterators;
 import com.google.common.collect.Lists;
 import com.google.common.primitives.ImmutableIntArray;
 import com.google.common.primitives.Ints;
-import com.google.common.util.concurrent.ThreadFactoryBuilder;
 import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Arrays;
@@ -278,7 +277,8 @@ public final class InterpolationManager {
     } else {
       // important to use daemon threads here, because we never have the chance to stop the executor
       executor =
-          Executors.newSingleThreadExecutor(new ThreadFactoryBuilder().setDaemon(true).build());
+          Executors.newSingleThreadExecutor(
+              Thread.ofPlatform().daemon().name(getClass().getSimpleName() + "-thread").factory());
     }
 
     if (reuseInterpolationEnvironment) {
@@ -289,8 +289,8 @@ public final class InterpolationManager {
 
     itpStrategy =
         switch (strategy) {
-          case SEQ_CPACHECKER -> new SequentialInterpolation(
-              pLogger, pShutdownNotifier, fmgr, config);
+          case SEQ_CPACHECKER ->
+              new SequentialInterpolation(pLogger, pShutdownNotifier, fmgr, config);
           case SEQ -> new SequentialInterpolationWithSolver(pLogger, pShutdownNotifier, fmgr);
           case TREE_WELLSCOPED -> new WellScopedInterpolation(pLogger, pShutdownNotifier, fmgr);
           case TREE_NESTED -> new NestedInterpolation(pLogger, pShutdownNotifier, fmgr);
@@ -336,7 +336,9 @@ public final class InterpolationManager {
       try {
         return callable.call();
       } catch (Exception e) {
-        Throwables.propagateIfPossible(e, CPAException.class, InterruptedException.class);
+        Throwables.throwIfInstanceOf(e, CPAException.class);
+        Throwables.throwIfInstanceOf(e, InterruptedException.class);
+        Throwables.throwIfUnchecked(e);
         throw new UnexpectedCheckedException("refinement", e);
       }
     }
@@ -356,8 +358,9 @@ public final class InterpolationManager {
 
     } catch (ExecutionException e) {
       Throwable t = e.getCause();
-      Throwables.propagateIfPossible(t, CPAException.class, InterruptedException.class);
-
+      Throwables.throwIfInstanceOf(t, CPAException.class);
+      Throwables.throwIfInstanceOf(t, InterruptedException.class);
+      Throwables.throwIfUnchecked(t);
       throw new UnexpectedCheckedException("interpolation", t);
     }
   }
@@ -412,6 +415,23 @@ public final class InterpolationManager {
       final List<AbstractState> pAbstractionStates,
       final Optional<ARGPath> imprecisePath)
       throws RefinementFailedException, InterruptedException {
+
+    if (pFormulas.getSize() == 1) {
+      // If there is only one block, interpolation is meaningless because the list of expected
+      // interpolants is empty. In principle, using the Interpolator below would work fine,
+      // but for formulas with floats, MathSAT fails to return a result for UNSAT formulas
+      // because it would not be able to compute interpolants afterward. So we use a
+      // non-interpolating solver. This could also be slightly more efficient. We miss out on any
+      // of the advanced heuristics like environment reuse, but for a single block there wouldn't be
+      // anything to reuse anyway.
+      CounterexampleTraceInfo cex =
+          buildCounterexampleTraceWithoutInterpolation0(pFormulas, imprecisePath);
+      if (cex.isSpurious()) {
+        return CounterexampleTraceInfo.infeasible(ImmutableList.of());
+      } else {
+        return cex;
+      }
+    }
 
     cexAnalysisTimer.start();
     try {
@@ -475,7 +495,7 @@ public final class InterpolationManager {
 
   private CounterexampleTraceInfo buildCounterexampleTraceWithoutInterpolation0(
       final BlockFormulas pFormulas, Optional<ARGPath> imprecisePath)
-      throws CPAException, InterruptedException {
+      throws RefinementFailedException, InterruptedException {
 
     cexAnalysisTimer.start();
     try {
@@ -601,8 +621,7 @@ public final class InterpolationManager {
     if (!bfmgr.isTrue(bitwiseAxioms)) {
       logger.log(
           Level.ALL, "DEBUG_3", "ADDING BITWISE AXIOMS TO THE", "LAST GROUP: ", bitwiseAxioms);
-      return listAndElement(
-          f.subList(0, f.size() - 1), bfmgr.and(f.get(f.size() - 1), bitwiseAxioms));
+      return listAndElement(f.subList(0, f.size() - 1), bfmgr.and(f.getLast(), bitwiseAxioms));
     }
 
     return f;
@@ -785,7 +804,7 @@ public final class InterpolationManager {
    *
    * @param formulas The list of formulas on the path.
    * @param pProver The solver.
-   * @param pImprecisePath A optional (potentially infeasible) path to the target state. If given,
+   * @param pImprecisePath An optional (potentially infeasible) path to the target state. If given,
    *     the model of the prover environment is used to determine a feasible path through the ARG to
    *     the same target state.
    * @return Information about the error path, including a satisfying assignment.
@@ -880,7 +899,7 @@ public final class InterpolationManager {
     /**
      * Builds a new solver environment out of the old environment and replaces the old. Also asserts
      * all formulas currently on the assertion stack and calls isUnsat() once on the new
-     * environment. Deletes old environment afterwards. The currentlyAssertedFormulas are updated as
+     * environment. Deletes old environment afterward. The currentlyAssertedFormulas are updated as
      * well. Should be used after an interpolation failed with an exception.
      *
      * @throws InterruptedException solver specific
@@ -1047,7 +1066,7 @@ public final class InterpolationManager {
      * @param formulasWithStatesAndGroupdIds The list where to store the references (in original
      *     order) to the interpolation groups. This is just a list of 'identifiers' for the
      *     formulas.
-     * @return True if the formulas are unsatisfiable.
+     * @return whether the formulas are unsatisfiable.
      */
     private boolean checkInfeasabilityOfTrace(
         final List<BooleanFormula> traceFormulas,
@@ -1076,17 +1095,17 @@ public final class InterpolationManager {
 
       // we have to do the sat check every time, as it could be that also
       // with incremental checking it was missing (when the path is infeasible
-      // and formulas get pushed afterwards)
+      // and formulas get pushed afterward)
       return itpProver.isUnsat();
     }
 
     /**
-     * For optimization we try to share the solver stack between different solver calls. Before
+     * For optimization, we try to share the solver stack between different solver calls. Before
      * pushing a new set of formulas, we need to determine all old formulas that need to be popped
      * from the solver stack.
      *
      * @param formulasWithStatesAndGroupdIds the new sorted collection of formulas, with indizes
-     * @param todoIterator iterator producing the indices of formulas to be used, afterwards it is
+     * @param todoIterator iterator producing the indices of formulas to be used, afterward it is
      *     positioned at the new starting point
      */
     private int getIndexOfFirstNonReusableFormula(
