@@ -152,6 +152,7 @@ class AssignmentFormulaHandler {
   AssignmentFormulaHandler(
       CToFormulaConverterWithPointerAliasing pConv,
       CFAEdge pEdge,
+      String pFunction,
       SSAMapBuilder pSsa,
       PointerTargetSetBuilder pPts,
       Constraints pConstraints,
@@ -171,7 +172,9 @@ class AssignmentFormulaHandler {
     constraints = pConstraints;
     regionMgr = pRegionMgr;
 
-    addressHandler = new AddressHandler(pConv, pSsa, pConstraints, pErrorConditions, pRegionMgr);
+    addressHandler =
+        new AddressHandler(
+            pConv, pEdge, pFunction, pSsa, pPts, pConstraints, pErrorConditions, pRegionMgr);
   }
 
   /**
@@ -303,12 +306,12 @@ class AssignmentFormulaHandler {
     // formulas.
 
     final CType resultType = lhs.type();
-    long targetBitSize = typeHandler.getBitSizeof(targetType);
-    long lhsBitSize = typeHandler.getBitSizeof(resultType);
+    long targetBitSize = typeHandler.getExactBitSizeof(targetType);
+    long lhsBitSize = typeHandler.getExactBitSizeof(resultType);
 
     // Handle full-span assignments upfront, this is better than via the loop below.
     if (rhsList.size() == 1) {
-      final ResolvedPartialAssignmentRhs rhs = rhsList.get(0);
+      final ResolvedPartialAssignmentRhs rhs = rhsList.getFirst();
       final PartialSpan rhsSpan = rhs.span();
       if (rhsSpan.isFullSpan(lhsBitSize) && lhsBitSize == targetBitSize) {
 
@@ -429,7 +432,7 @@ class AssignmentFormulaHandler {
   }
 
   /**
-   * Construct an span-sized bitvector formula containing the part of given right-hand-side formula,
+   * Construct a span-sized bitvector formula containing the part of given right-hand-side formula,
    * as determined by {@code rhsSpan}.
    *
    * @param rhs Resolved array slice containing the expression to convert and type we are converting
@@ -470,7 +473,7 @@ class AssignmentFormulaHandler {
   }
 
   /**
-   * Construct an bitvector formula retaining a range of bits from a given bitvector.
+   * Construct a bitvector formula retaining a range of bits from a given bitvector.
    *
    * @param formula Bitvector formula.
    * @param retainedRange The range determining the bits to retain. The range is assumed to be
@@ -518,8 +521,8 @@ class AssignmentFormulaHandler {
             .orElseThrow();
     return switch (conversionType) {
       case CAST ->
-      // cast rhs from rhs type to lhs type
-      Value.ofValue(conv.makeCast(fromType, toType, rhsFormula, constraints, edge));
+          // cast rhs from rhs type to lhs type
+          Value.ofValue(conv.makeCast(fromType, toType, rhsFormula, constraints, edge));
       case REINTERPRET -> {
         // reinterpret rhs from rhs type to lhs type
         final @Nullable Formula reinterpretedFormula =
@@ -559,7 +562,7 @@ class AssignmentFormulaHandler {
     final BitvectorFormula bitvectorFormula =
         conv.makeValueReinterpretationToBitvector(rhsType, rhsFormula);
 
-    final long fromBitSizeof = conv.getBitSizeof(rhsType);
+    final long fromBitSizeof = typeHandler.getExactBitSizeof(rhsType);
     // the type which we are repeating must be byte-sized
     // addressing would not make any sense otherwise
     verify(fromBitSizeof == conv.machineModel.getSizeofCharInBits());
@@ -660,7 +663,7 @@ class AssignmentFormulaHandler {
     assert !options.useArraysForHeap();
 
     checkIsSimplified(lvalueType);
-    final long size = conv.getSizeof(lvalueType);
+    final long size = typeHandler.getExactSizeof(lvalueType);
 
     if (options.useQuantifiersOnArrays()) {
       addRetentionConstraintsWithQuantifiers(
@@ -744,7 +747,7 @@ class AssignmentFormulaHandler {
         region = regionMgr.makeMemoryRegion(lvalueType);
       } else { // CCompositeType
         CCompositeTypeMemberDeclaration memberDeclaration =
-            ((CCompositeType) lvalueType).getMembers().get(0);
+            ((CCompositeType) lvalueType).getMembers().getFirst();
         region = regionMgr.makeMemoryRegion(lvalueType, memberDeclaration);
       }
       // for lvalueType
@@ -777,7 +780,7 @@ class AssignmentFormulaHandler {
       final FormulaType<?> targetType = conv.getFormulaTypeFromCType(region.getType());
 
       for (final PointerTarget target : targetLookup.apply(region)) {
-        regionMgr.addTargetToStats(edge, ufName, target);
+        regionMgr.addTargetToStats(ufName);
         conv.shutdownNotifier.shutdownIfNecessary();
         final Formula targetAddress = conv.makeFormulaForTarget(target);
         constraintConsumer.accept(
@@ -1115,7 +1118,7 @@ class AssignmentFormulaHandler {
                   updatedRegions,
                   condition,
                   useQuantifiers));
-      offset += conv.getSizeof(lvalueArrayType.getType());
+      offset += typeHandler.getExactSizeof(lvalueArrayType.getType());
     }
     return result;
   }
@@ -1278,9 +1281,9 @@ class AssignmentFormulaHandler {
         !useOldSSAIndices || updatedRegions == null,
         "With old SSA indices returning updated regions does not make sense");
 
-    if (lvalueType instanceof CArrayType) {
+    if (lvalueType instanceof CArrayType cArrayType) {
       return makeDestructiveArrayAssignment(
-          (CArrayType) lvalueType,
+          cArrayType,
           rvalueType,
           lvalue,
           rvalue,
