@@ -39,10 +39,12 @@ import org.sosy_lab.cpachecker.cfa.types.c.CCompositeType.CCompositeTypeMemberDe
 import org.sosy_lab.cpachecker.cfa.types.c.CNumericTypes;
 import org.sosy_lab.cpachecker.cfa.types.c.CPointerType;
 import org.sosy_lab.cpachecker.cfa.types.c.CType;
+import org.sosy_lab.cpachecker.cfa.types.c.CTypeQualifiers;
 import org.sosy_lab.cpachecker.cfa.types.c.CVoidType;
 import org.sosy_lab.cpachecker.cpa.value.AbstractExpressionValueVisitor;
 import org.sosy_lab.cpachecker.cpa.value.type.NumericValue;
 import org.sosy_lab.cpachecker.exceptions.UnrecognizedCodeException;
+import org.sosy_lab.cpachecker.exceptions.UnsupportedCodeException;
 import org.sosy_lab.cpachecker.util.CFAUtils;
 import org.sosy_lab.cpachecker.util.Pair;
 import org.sosy_lab.cpachecker.util.predicates.pathformula.ErrorConditions;
@@ -68,6 +70,7 @@ class DynamicMemoryHandler {
   private final CToFormulaConverterWithPointerAliasing conv;
   private final TypeHandlerWithPointerAliasing typeHandler;
   private final CFAEdge edge;
+  private final String contextFunction;
   private final SSAMapBuilder ssa;
   private final PointerTargetSetBuilder pts;
   private final Constraints constraints;
@@ -87,6 +90,7 @@ class DynamicMemoryHandler {
   DynamicMemoryHandler(
       CToFormulaConverterWithPointerAliasing pConv,
       CFAEdge pEdge,
+      String pFunction,
       SSAMapBuilder pSsa,
       PointerTargetSetBuilder pPts,
       Constraints pConstraints,
@@ -95,6 +99,7 @@ class DynamicMemoryHandler {
     conv = pConv;
     typeHandler = pConv.typeHandler;
     edge = pEdge;
+    contextFunction = pFunction;
     ssa = pSsa;
     pts = pPts;
     constraints = pConstraints;
@@ -129,6 +134,8 @@ class DynamicMemoryHandler {
 
     } else if (conv.options.isMemoryFreeFunction(functionName)) {
       return handleMemoryFree(e, expressionVisitor);
+    } else if (conv.options.isMemoryReallocFunction(functionName)) {
+      throw new UnsupportedCodeException(functionName, edge);
     } else {
       throw new AssertionError("Unknown memory allocation function " + functionName);
     }
@@ -150,7 +157,7 @@ class DynamicMemoryHandler {
     List<CExpression> parameters = e.getParameterExpressions();
 
     if (functionName.equals(CALLOC_FUNCTION) && parameters.size() == 2) {
-      CExpression param0 = parameters.get(0);
+      CExpression param0 = parameters.getFirst();
       CExpression param1 = parameters.get(1);
 
       // Build expression for param0 * param1 as new parameter.
@@ -185,7 +192,7 @@ class DynamicMemoryHandler {
 
     } else if (parameters.size() != 1) {
       if (parameters.size() > 1 && conv.options.hasSuperfluousParameters(functionName)) {
-        parameters = Collections.singletonList(parameters.get(0));
+        parameters = Collections.singletonList(parameters.getFirst());
       } else {
         throw new UnrecognizedCodeException(
             String.format(
@@ -231,7 +238,7 @@ class DynamicMemoryHandler {
     // as it might refer to another function if this method is called from handleMemoryAllocation()
     if (parameters.size() != 1) {
       if (parameters.size() > 1 && conv.options.hasSuperfluousParameters(functionName)) {
-        parameters = Collections.singletonList(parameters.get(0));
+        parameters = Collections.singletonList(parameters.getFirst());
       } else {
         throw new UnrecognizedCodeException(
             String.format(
@@ -242,7 +249,7 @@ class DynamicMemoryHandler {
       }
     }
 
-    final CExpression parameter = parameters.get(0);
+    final CExpression parameter = parameters.getFirst();
     Long size = null;
     final CType newType;
     if (isSizeof(parameter)) {
@@ -252,9 +259,9 @@ class DynamicMemoryHandler {
       final CType operand1Type = getSizeofType(product.getOperand1());
       final CType operand2Type = getSizeofType(product.getOperand2());
       if (operand1Type != null) {
-        newType = new CArrayType(false, false, operand1Type, product.getOperand2());
+        newType = new CArrayType(CTypeQualifiers.NONE, operand1Type, product.getOperand2());
       } else if (operand2Type != null) {
-        newType = new CArrayType(false, false, operand2Type, product.getOperand1());
+        newType = new CArrayType(CTypeQualifiers.NONE, operand2Type, product.getOperand1());
       } else {
         throw new UnrecognizedCodeException(
             "Can't determine type for internal memory allocation", edge, e);
@@ -273,7 +280,7 @@ class DynamicMemoryHandler {
         } else {
           length = parameter;
         }
-        newType = new CArrayType(false, false, CVoidType.VOID, length);
+        newType = new CArrayType(CTypeQualifiers.NONE, CVoidType.VOID, length);
       } else {
         newType = null;
       }
@@ -351,8 +358,8 @@ class DynamicMemoryHandler {
     if (errorConditions.isEnabled()) {
       final Formula operand =
           expressionVisitor.asValueFormula(
-              parameters.get(0).accept(expressionVisitor),
-              typeHandler.getSimplifiedType(parameters.get(0)));
+              parameters.getFirst().accept(expressionVisitor),
+              typeHandler.getSimplifiedType(parameters.getFirst()));
       BooleanFormula validFree = conv.fmgr.makeEqual(operand, conv.nullPointer);
 
       for (String base : pts.getAllBases()) {
@@ -390,7 +397,7 @@ class DynamicMemoryHandler {
       // TODO: rewrite dynamic memory handler to use high-level slice assignments and memset
       AssignmentFormulaHandler assignmentFormulaHandler =
           new AssignmentFormulaHandler(
-              conv, edge, ssa, pts, constraints, errorConditions, regionMgr);
+              conv, edge, contextFunction, ssa, pts, constraints, errorConditions, regionMgr);
       @SuppressWarnings("deprecation")
       final BooleanFormula initialization =
           assignmentFormulaHandler.makeDestructiveAssignment(
@@ -429,8 +436,8 @@ class DynamicMemoryHandler {
           addAllFields(memberType);
         }
       }
-    } else if (type instanceof CArrayType) {
-      final CType elementType = checkIsSimplified(((CArrayType) type).getType());
+    } else if (type instanceof CArrayType cArrayType) {
+      final CType elementType = checkIsSimplified(cArrayType.getType());
       addAllFields(elementType);
     }
   }
@@ -470,23 +477,23 @@ class DynamicMemoryHandler {
    * @return The value, if the expression is an integer literal, or {@code null}
    */
   private static @Nullable Long tryEvaluateExpression(CExpression e) {
-    if (e instanceof CIntegerLiteralExpression) {
-      return ((CIntegerLiteralExpression) e).getValue().longValueExact();
+    if (e instanceof CIntegerLiteralExpression cIntegerLiteralExpression) {
+      return cIntegerLiteralExpression.getValue().longValueExact();
     }
     return null;
   }
 
   /**
-   * Returns, whether a expression is a {@code sizeof} expression.
+   * Returns, whether an expression is a {@code sizeof} expression.
    *
    * @param e The C expression.
    * @return True, if the expression is a {@code sizeof} expression, false otherwise.
    */
   private static boolean isSizeof(final CExpression e) {
-    return (e instanceof CUnaryExpression
-            && ((CUnaryExpression) e).getOperator() == UnaryOperator.SIZEOF)
-        || (e instanceof CTypeIdExpression
-            && ((CTypeIdExpression) e).getOperator() == TypeIdOperator.SIZEOF);
+    return (e instanceof CUnaryExpression cUnaryExpression
+            && cUnaryExpression.getOperator() == UnaryOperator.SIZEOF)
+        || (e instanceof CTypeIdExpression cTypeIdExpression
+            && cTypeIdExpression.getOperator() == TypeIdOperator.SIZEOF);
   }
 
   /**
@@ -497,10 +504,9 @@ class DynamicMemoryHandler {
    *     otherwise.
    */
   private static boolean isSizeofMultiple(final CExpression e) {
-    return e instanceof CBinaryExpression
-        && ((CBinaryExpression) e).getOperator() == BinaryOperator.MULTIPLY
-        && (isSizeof(((CBinaryExpression) e).getOperand1())
-            || isSizeof(((CBinaryExpression) e).getOperand2()));
+    return e instanceof CBinaryExpression cBinaryExpression
+        && cBinaryExpression.getOperator() == BinaryOperator.MULTIPLY
+        && (isSizeof(cBinaryExpression.getOperand1()) || isSizeof(cBinaryExpression.getOperand2()));
   }
 
   /**
@@ -510,12 +516,12 @@ class DynamicMemoryHandler {
    * @return The size of the expression.
    */
   private @Nullable CType getSizeofType(CExpression e) {
-    if (e instanceof CUnaryExpression
-        && ((CUnaryExpression) e).getOperator() == UnaryOperator.SIZEOF) {
-      return typeHandler.getSimplifiedType(((CUnaryExpression) e).getOperand());
-    } else if (e instanceof CTypeIdExpression
-        && ((CTypeIdExpression) e).getOperator() == TypeIdOperator.SIZEOF) {
-      return typeHandler.simplifyType(((CTypeIdExpression) e).getType());
+    if (e instanceof CUnaryExpression cUnaryExpression
+        && cUnaryExpression.getOperator() == UnaryOperator.SIZEOF) {
+      return typeHandler.getSimplifiedType(cUnaryExpression.getOperand());
+    } else if (e instanceof CTypeIdExpression cTypeIdExpression
+        && cTypeIdExpression.getOperator() == TypeIdOperator.SIZEOF) {
+      return typeHandler.simplifyType(cTypeIdExpression.getType());
     } else {
       return null;
     }
@@ -537,7 +543,7 @@ class DynamicMemoryHandler {
     assert sizeLiteral.getValue() != null;
 
     final long size = sizeLiteral.getValue().longValueExact();
-    final long typeSize = conv.getSizeof(type);
+    final long typeSize = typeHandler.getExactSizeof(type);
     if (type instanceof CArrayType) {
       // An array type is used in the cast or assignment, so its size should likely match the
       // allocated size.
@@ -569,8 +575,7 @@ class DynamicMemoryHandler {
       }
 
       return new CArrayType(
-          false,
-          false,
+          CTypeQualifiers.NONE,
           type,
           new CIntegerLiteralExpression(
               sizeLiteral.getFileLocation(),
@@ -580,8 +585,8 @@ class DynamicMemoryHandler {
   }
 
   private static CType unwrapPointers(final CType type) {
-    if (type instanceof CPointerType) {
-      return unwrapPointers(((CPointerType) type).getType());
+    if (type instanceof CPointerType cPointerType) {
+      return unwrapPointers(cPointerType.getType());
     }
     return type;
   }
@@ -773,9 +778,9 @@ class DynamicMemoryHandler {
       }
     }
 
-    if (lhs instanceof CIdExpression) {
+    if (lhs instanceof CIdExpression cIdExpression) {
       // If LHS is a variable, remove previous points-to bindings containing it
-      pts.removeDeferredAllocationPointer(((CIdExpression) lhs).getDeclaration().getQualifiedName())
+      pts.removeDeferredAllocationPointer(cIdExpression.getDeclaration().getQualifiedName())
           .forEach(d -> handleDeferredAllocationPointerRemoval(lhs));
     } else {
       // Else try to remove bindings and only actually remove if no dangling objects arises
